--- a/2022_07/2022_07_02 면접준비.md
+++ b/2022_07/2022_07_02 면접준비.md
@@ -2,15 +2,15 @@
 
 ## 2022_07_01 회사 지원 넣기
 
-부랴부랴 대충 써서 낸 이력서가 낸지, 한시간도 안되서 바로 연락이 왔다.
+부랴부랴 대충 써서 낸 이력서가 낸지, 한시간도 안돼서 바로 연락이 왔다.
 
 아니 뭔 바로 연락이 온데;;;
 
-굉장히 심란한 마음을 가지고 준비를 해야하긴 해야하는데 하긴 싫고, 군대 끌려가는 기분이고
+준비를 해야하긴 해야하는데 하긴 싫고, 군대 끌려가는 기분이고
 
 일반적인 프론트개발이 아니라 SI 기업이라 더 무서운 느낌도 들었다.
 
-이런 씸창난 마음에 도저치 뭐가 손에 안잡히니 집에 가서 노트북 켜놓고 걍 있는데
+심란한 마음에 공부가 눈에 안들어와 집에 가서 그냥 노트북 켜놓고 걍 있었는데
 
 우빈이가 와서 막 면접준비가 어쩌구 저쩌구 하면서
 
@@ -24,11 +24,9 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 
 ## 2022_07_02 면접 준비1
 
-심란한 마음으로 자서 그런지 평소에 엄마가 깨워서 억지로 일어난게 아닌,
+심란해서 그런지 평소보다 일찍 일어났다.
 
-순수하게 6시에 일어났다. 심란해서 그런지 피곤한데 잠은 또 안오더라.
-
-보통 주변이 시끄러워서 6시쯤에 깼다가 다시 자는데.
+피곤한데 잠은 또 안온다.
 
 ---
 
@@ -36,7 +34,7 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 
 유튜브나 쳐 보면서 시간만 보내다가 안되겠다 싶어서
 
-이렇게 일기 형식으로 쓰면서 내가 면접준비를 하기를 결심했다.
+이렇게 일기 형식으로 쓰면서 면접준비를 하기로 했다.
 
 어차피 취업하면 일기 쓰기하려고 생각했었는데 좀더 당겨서 지금 바로 하도록 하자.
 
@@ -64,6 +62,14 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 
 이게 ㄹㅇ 한번 슥 읽으라는 소리가 아닐것이다.
 
-왜냐면 봤다고 하면 이색히 100퍽 설명해보라고 한다 ㅋㅋ
+왜냐면 봤다고 하면 이색히 100퍼 설명해보라고 한다 ㅋㅋ
 
-뭐 차피 해야지 ㅋ 알아둬서 나쁠꺼 하나도 없으니까.
+뭐 어차피 해야한다 ㅋ 알아둬서 나쁠꺼 하나도 없으니까.
+
+---
+
+객체지향은 무엇인가? (OOP)
+
+대충 기존의 컴퓨터의 시선으로 만들어진 절차지향이 아닌,
+
+인간 중심적인 프로그래밍이라고 할 수 있다.
