--- a/2022_07/2022_07_02 면접준비.md
+++ b/2022_07/2022_07_02 면접준비.md
@@ -73,3 +73,27 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 대충 기존의 컴퓨터의 시선으로 만들어진 절차지향이 아닌,
 
 인간 중심적인 프로그래밍이라고 할 수 있다.
+
+## 2022_07_03 면접 준비2
+
+오늘도 딱히 뭔가 한게 없는듯 ㅋ
+
+걍 글렀음 ㅋㅋㅋ
+
+아 MVC 는 이해함
+
+Model, View, Controller 임
+
+사용자가 웹 브라우저에서 물건을 사면 그 값이 서버를 통해
+
+서블릿(controller) 로 갈것이고
+
+나는 그 값을 DB, DTO 등에 정보를 주고 박고 변환을 하고 막이래
+
+그런 일련의 과정을 끝낸 뒤 나온 값은 서블릿에서 받고.
+
+그 값을 JSP 에 보내
+
+그럼 JSP 는 그 값을 참조해서 화면을 구성해서 다시 서블릿으로 보내
+
+서블릿에서 다시 웹서버 > 웹 브라우저로 전달이 됨 땅땅땅
