--- a/2022_07/2022_07_02 면접준비.md
+++ b/2022_07/2022_07_02 면접준비.md
@@ -82,18 +82,30 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 
 아 MVC 는 이해함
 
-Model, View, Controller 임
+- MVC
 
-사용자가 웹 브라우저에서 물건을 사면 그 값이 서버를 통해
+  Model, View, Controller 임
 
-서블릿(controller) 로 갈것이고
+  사용자가 웹 브라우저에서 물건을 사면 그 값이 서버를 통해
 
-나는 그 값을 DB, DTO 등에 정보를 주고 박고 변환을 하고 막이래
+  서블릿(controller) 로 갈것이고
 
-그런 일련의 과정을 끝낸 뒤 나온 값은 서블릿에서 받고.
+  나는 그 값을 DB, DTO 등에 정보를 주고 박고 변환을 하고 막이래
 
-그 값을 JSP 에 보내
+  그런 일련의 과정을 끝낸 뒤 나온 값은 서블릿에서 받고.
 
-그럼 JSP 는 그 값을 참조해서 화면을 구성해서 다시 서블릿으로 보내
+  그 값을 JSP 에 보내
 
-서블릿에서 다시 웹서버 > 웹 브라우저로 전달이 됨 땅땅땅
+  그럼 JSP 는 그 값을 참조해서 화면을 구성해서 다시 서블릿으로 보내
+
+  서블릿에서 다시 웹서버 > 웹 브라우저로 전달이 됨 땅땅땅
+
+- 오버라이딩과 오버로딩의 차이점
+
+  - 오버로딩
+
+    리턴값과 함수명은 같고 파라미터만 다른거
+
+  - 오버라이딩
+
+    재정의
