--- a/2022_07/2022_07_02 면접준비.md
+++ b/2022_07/2022_07_02 면접준비.md
@@ -109,3 +109,41 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
   - 오버라이딩
 
     재정의
+
+## 2022_07_04 면접 준비3
+
+ㅋㅋ 글렀다 글렀어 ㅋ
+
+- 자바란?
+
+      객체 지향적 프로그래밍 언어
+
+  자바의 가장 큰 특징은 독립적인 언어라는거.
+
+  소스 코드를 기계어로 직접 컴파일하여 링크하는 C/C++의 컴파일러와
+
+  달리 자바 컴파일러는 바이트코드인 클래스 파일(.class)을 생성하고,
+
+  이 파일의 바이트코드를 읽은 뒤 기계어로 바꾸어 실행하는 것은 자바 가상 머신이다.
+
+그럼 객체 지향은?
+
+- 객체 지향 프로그래밍 (OOP Object Oriented Programming)
+
+        프로그램 설계방법론.
+        프로그램을 수많은 '객체(object)'라는 기본 단위로 나누고
+         이들의 상호작용으로 서술하는 방식이다.
+        객체란 하나의 역할을 수행하는 '메소드와 변수(데이터)'의
+         묶음으로 봐야 한다.
+
+  - 갭슐화
+
+  - 정보은닉
+
+  - 상속
+
+  - 다형성
+
+  인스턴스는 객체를 실체화한 것이라고 보면 된다. 즉 프로그램 코드 상에서 자료형이 임의의 클래스로 선언된 식별자는 '객체'라 하고, 코드 컴파일 후 프로그램이 실행될 때 해당 객체가 메모리에 적재되면 '인스턴스'라고 불린다.
+
+  어느 단계를 기준으로 하느냐의 차이일 뿐 객체와 인스턴스는 같은 것이라고 할 수 있다.
