--- a/2022_07/2022_07_02 면접준비.md
+++ b/2022_07/2022_07_02 면접준비.md
@@ -147,3 +147,134 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
   인스턴스는 객체를 실체화한 것이라고 보면 된다. 즉 프로그램 코드 상에서 자료형이 임의의 클래스로 선언된 식별자는 '객체'라 하고, 코드 컴파일 후 프로그램이 실행될 때 해당 객체가 메모리에 적재되면 '인스턴스'라고 불린다.
 
   어느 단계를 기준으로 하느냐의 차이일 뿐 객체와 인스턴스는 같은 것이라고 할 수 있다.
+
+객체 지향적 설계 원칙
+
+1. SRP(Single Responsibility Principle) : 단일 책임 원칙
+   클래스는 단 하나의 책임을 가져야 하며 클래스를 변경하는 이유는 단 하나의 이유이어야 한다.
+
+1. OCP(Open-Closed Principle) : 개방-폐쇄 원칙
+   확장에는 열려 있어야 하고 변경에는 닫혀 있어야 한다.
+
+1. LSP(Liskov Substitution Principle) : 리스코프 치환 원칙
+   상위 타입의 객체를 하위 타입의 객체로 치환해도 상위 타입을 사용하는 프로그램은 정상적으로 동작해야 한다.
+
+1. ISP(Interface Segregation Principle) : 인터페이스 분리 원칙
+   인터페이스는 그 인터페이스를 사용하는 클라이언트를 기준으로 분리해야 한다.
+
+1. DIP(Dependency Inversion Principle) : 의존 역전 원칙
+   고수준 모듈은 저수준 모듈의 구현에 의존해서는 안된다.
+
+## 2022_07_05 면접 준비4
+
+- HTTP ?
+
+      Hypertext Transfer Protocol
+      웹 브라우저와 웹서버가 통신을 할 때 사용하는 통신 규칙
+
+  - 웹의 네 가지 구성 요소
+
+    - html
+
+      웹 페이지를 만드는 컴퓨터 언어
+
+    - url
+
+      원하는 웹 페이지에 방문할 수 있도록 도와주는 주소 체계
+
+    - 웹 브라우저 - 웹 서버
+
+      웹 페이지를 주고받는 소프트웨어
+
+    - http
+
+      웹 브라우저와 웹서버가 통신을 할 때 사용하는 통신 규칙
+
+- RESTful API ?
+
+      두 컴퓨터 시스템이 인터넷을 통해 정보를 안전하게 교환하기 위해 사용하는 인터페이스
+
+  https://aws.amazon.com/ko/what-is/restful-api/
+
+- GET, POST 차이점
+
+      HTTP 프로토콜을 이용해서 서버에 무엇인가를 요청할 때 사용하는 방식
+
+  - GET 방식
+
+    우선 GET 방식은 요청하는 데이터가 HTTP Request Message의 Header 부분에 url 이 담겨서 전송된다.
+
+    때문에 url 상에 ? 뒤에 데이터가 붙어 request 를 보내게 되는 것이다.
+
+    이러한 방식은 url 이라는 공간에 담겨가기 때문에 전송할 수 있는 데이터의 크기가 제한적이다.
+
+    또 보안이 필요한 데이터에 대해서는 데이터가 그대로 url 에 노출되므로 GET방식은 적절하지 않다.
+
+  - POST 방식
+
+    HTTP Request Message의 Body 부분에 데이터가 담겨서 전송된다.
+    때문에 바이너리 데이터를 요청하는 경우 POST 방식으로 보내야 하는 것처럼 데이터 크기가 GET 방식보다 크고 보안면에서 낫다.
+
+- 프로세스, 스레드의 차이점 ?
+
+  - 프로세스
+
+        운영체제로부터 자원을 할당받는 작업의 단위
+
+  - 스레드
+
+          할당 받은 자원을 이용하는 실행이 단위이고
+          프로세스 내에 여러개 생길 수 있다
+          하나의 어플리케이션이 프로세스고 그 안에서 여러 분기로 스레드가 생기는거
+
+- 멀티 프로세스? 멀티 스레드?
+
+  - 멀티 프로세스
+
+        하나의 프로그램을 여러개의 프로세스로 구성하여 각 프로세스가 하나의 작업 처리 하는것
+
+    장점 : 하나의 프로세스가 잘못되도 프로그램은 동작함
+
+    단점 : context switching 비용 발생
+
+  - 멀티 스레드
+
+        프로그램을 여러개의 스레드로 구성하고 각 스레드가 작업 처리
+
+    장점 : 시스템 자원소모 감소, 처리 비용 감소, 쓰레드간 자원 공유
+
+    단점 : 디버깅 어려움, 동기화 이슈, 스레드 하나 조지면 전체 프로세스 문제 발생
+
+  https://brunch.co.kr/@babosamo/100
+
+- 동기와 비동기의 차이
+
+      데이터 처리 모델
+      데이터 처리 모델을 쉽게 표현하자면 데이터를 받는 방식
+      이 방식에는 동기식 처리와 비동기식 처리 모델이 존재
+
+  - 동기
+
+        동기는 데이터의 요청과 결과가 한 자리에서 동시에 일어나는것
+
+    장점 : 설계가 매우 간단하고 직관적이다.
+
+    단점 : 결과가 주어질 때까지 아무것도 못하고 대기해야 합니다.
+
+  - 비동기
+
+        요청한 결과가 동시에 일어나지 않는다
+
+    장점 : 결과가 반환되는 시간 동안 다른 작업을 수행가능
+
+    단점 : 동기식보다 설계가 복잡합니다.
+
+    https://github.com/JaeYeopHan/Interview_Question_for_Beginner/tree/master/OS#%EB%8F%99%EA%B8%B0%EC%99%80-%EB%B9%84%EB%8F%99%EA%B8%B0%EC%9D%98-%EC%B0%A8%EC%9D%B4
+
+- DB
+
+  https://github.com/JaeYeopHan/Interview_Question_for_Beginner/tree/master/Database
+
+## 2022_07_06 면접 준비5 서울로
+
+## ## 2022_07_07 면접
