--- a/2022_07/2022_07_02 면접준비.md
+++ b/2022_07/2022_07_02 면접준비.md
@@ -131,18 +131,47 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 - 객체 지향 프로그래밍 (OOP Object Oriented Programming)
 
         프로그램 설계방법론.
-        프로그램을 수많은 '객체(object)'라는 기본 단위로 나누고
-         이들의 상호작용으로 서술하는 방식이다.
-        객체란 하나의 역할을 수행하는 '메소드와 변수(데이터)'의
-         묶음으로 봐야 한다.
+        프로그램을 상태, 행위로 이루어진 '객체'라는
+        기본 단위로 나누고
+         이들의 상호작용으로 통해 프로그램을 설계, 개발
 
   - 갭슐화
 
-  - 정보은닉
+    속성과 행위를 하나로 묶는것
+
+    - 정보은닉
+
+      객체 내부 구현을 숨김으로써 정해진 메소드로만 상호작용하게 유도
+
+    자바 같은 경우 `접근 제어자`가 있음
+
+    public
+
+    protected
+
+    default
+
+    private
+
+  - 추상화
+
+    여러 객체들의 공통적인 특징을 도출해 내는 것
 
   - 상속
 
+    이미 정의된 상위클래스의 속성, 연산을 하위클래스가 물려 받는 것
+
   - 다형성
+
+    하나의 변수, 함수가 상황에 따라 다른 의미로 응답하는 것
+
+  - 장단점
+
+    객체지향 프로그래밍은 재사용이 용이하고,
+
+    생산성이 높으며, 유지보수가 용이한 반면
+
+    설계에 시간이 오래 걸리고, 실행 속도가 느리다.
 
   인스턴스는 객체를 실체화한 것이라고 보면 된다. 즉 프로그램 코드 상에서 자료형이 임의의 클래스로 선언된 식별자는 '객체'라 하고, 코드 컴파일 후 프로그램이 실행될 때 해당 객체가 메모리에 적재되면 '인스턴스'라고 불린다.
 
@@ -277,4 +306,4 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 
 ## 2022_07_06 면접 준비5 서울로
 
-## ## 2022_07_07 면접
+## 2022_07_07 면접
