--- a/2022_07/2022_07_02 면접준비.md
+++ b/2022_07/2022_07_02 면접준비.md
@@ -84,6 +84,9 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 
 - MVC
 
+      코드 재사용 용이, 사용자 인터페이스와 응용프로그램 개발에
+      소요되는 시간을 줄여주는 설계방식
+
   Model, View, Controller 임
 
   사용자가 웹 브라우저에서 물건을 사면 그 값이 서버를 통해
@@ -116,7 +119,7 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 
 - 자바란?
 
-      객체 지향적 프로그래밍 언어
+      객체 지향 프로그래밍 언어
 
   자바의 가장 큰 특징은 독립적인 언어라는거.
 
@@ -125,6 +128,8 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
   달리 자바 컴파일러는 바이트코드인 클래스 파일(.class)을 생성하고,
 
   이 파일의 바이트코드를 읽은 뒤 기계어로 바꾸어 실행하는 것은 자바 가상 머신이다.
+
+https://kim6394.tistory.com/161
 
 그럼 객체 지향은?
 
@@ -193,6 +198,10 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 
 1. DIP(Dependency Inversion Principle) : 의존 역전 원칙
    고수준 모듈은 저수준 모듈의 구현에 의존해서는 안된다.
+
+- Jdbc ?
+
+  자바에서 데이터베이스에 접속할 수 있게 해주는 API
 
 ## 2022_07_05 면접 준비4
 
@@ -303,6 +312,19 @@ https://github.com/JaeYeopHan/Interview_Question_for_Beginner
 - DB
 
   https://github.com/JaeYeopHan/Interview_Question_for_Beginner/tree/master/Database
+
+- JSP
+
+- DAO, DTO
+
+  - DAO
+
+    데이터베이스의 데이터에 접근하기 위한 객체
+    DB를 사용해 조회, 조작 하는 기능을 전담하도록 만든 객체
+
+  - DTO
+
+    계층간의 데이터 교환을 위한 객체
 
 ## 2022_07_06 면접 준비5 서울로
 
