--- a/2022_07/2022_07_02 면접준비.md
+++ b/2022_07/2022_07_02 면접준비.md
@@ -260,6 +260,8 @@ https://kim6394.tistory.com/161
   - 프로세스
 
         운영체제로부터 자원을 할당받는 작업의 단위
+        컴퓨터에서 실행중인 프로그램
+        각각 독립된 메모리 공간 할당
 
   - 스레드
 
@@ -329,6 +331,8 @@ https://kim6394.tistory.com/161
   - DTO
 
     계층간의 데이터 교환을 위한 객체
+
+- Spring 프레임 워크
 
 ## 2022_07_06 면접 준비5 서울로
 
