--- a/2022_07/2022_07_02 면접준비.md
+++ b/2022_07/2022_07_02 면접준비.md
@@ -1,4 +1,4 @@
-# 2022_07_01 ~
+# 2022_07_01 ~ 2022_07_10
 
 ## 2022_07_01 회사 지원 넣기
 
@@ -281,7 +281,7 @@ https://kim6394.tistory.com/161
 
   - 멀티 스레드
 
-        프로그램을 여러개의 스레드로 구성하고 각 스레드가 작업 처리
+        하나의 프로세스가 동시에 여러 작업을 실행하는 것
 
     장점 : 시스템 자원소모 감소, 처리 비용 감소, 쓰레드간 자원 공유
 
@@ -337,3 +337,5 @@ https://kim6394.tistory.com/161
 ## 2022_07_06 면접 준비5 서울로
 
 ## 2022_07_07 면접
+
+## 2022_07_10 일요일
