--- a/2022_07/2022_07_14.md
+++ b/2022_07/2022_07_14.md
@@ -129,3 +129,15 @@
 그래도 우선 취업 준비를 마저 하도록 하자.
 
 시발 ㅈ같네
+
+## 07_21
+
+난 비가 오는 날에는 코딩을 하곤 해....
+
+ㅇㅈㄹ
+
+에휴 뭐하냐 ㅋ 과기원쪽에 si 있어서 넣었더니 연락 없네 염병 ㅋ
+
+역시 정처기를 땃어야 했나 싶다 ㅋ
+
+어쩔수 없다. 이미 시간은 지났으니까
