--- a/study/JavaScript/md/3. 객체지향/5. 상속/상속.md
+++ b/study/JavaScript/md/3. 객체지향/5. 상속/상속.md
@@ -49,4 +49,4 @@ prototype을 안 가르키고 그냥 쳐 쓰고 있는게 너무 ㅈ같은데??
 
 나같이 자바를 통해 어느정도 아는 사람한태는 이게 더 헷갈리는 듯?
 
-우선 prototype 을 먼저 배우고 여기로 다시 돌아가자
+우선 [prototype](https://github.com/lugia574/diary/blob/main/study/JavaScript/md/3.%20%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5/6.%20prototype/prototype.md) 을 먼저 배우고 여기로 다시 돌아가자
