--- a/study/JavaScript/md/3. 객체지향/6. 상속/상속.md
+++ b/study/JavaScript/md/3. 객체지향/6. 상속/상속.md
@@ -1,31 +1,18 @@
 # 상속
 
-## 상속이란?
+## 1. 상속이란?
 
 상속은 객체는 연관된 로직들로 이루어진 작은 프로그램이라고 할 수 있다.
 
 상속은 객체의 로직을 그대로 물려 받는 또 다른 객체를 만들 수 있는 기능을 의미한다.
 
-단순히 물려받는 것이라면 의미가 없을 것이다. 기존의 로직을 **수정**하고 **변경**해서 파생된 **새로운** 객체를 만들 수 있게 해준다.
+단순히 물려받는 것이라면 의미가 없을 것이다.
 
-```js
-function Person(name) {
-  this.name = name;
-  this.introduce = function () {
-    return "My name is " + this.name;
-  };
-}
-var p1 = new Person("egoing");
-document.write(p1.introduce() + "<br />");
-```
+기존의 로직을 **수정**하고 **변경**해서 파생된 **새로운** 객체를 만들 수 있게 해준다.
 
-결과
+## 2. 상속 사용방법
 
-```
-My name is egoing
-```
-
-이것을 변경해보자
+상속을 하기 위해서는 `prototye` 을 이용해야한다
 
 ```js
 function Person(name) {
@@ -35,18 +22,56 @@ Person.prototype.name = null;
 Person.prototype.introduce = function () {
   return "My name is " + this.name;
 };
-var p1 = new Person("egoing");
+
+function Programmer(name) {
+  this.name = name;
+}
+```
+
+여기서 Programmer에 Person을 상속해 보자
+
+```js
+Programmer.prototype = new Person();
+
+var p1 = new Programmer("egoing");
 document.write(p1.introduce() + "<br />");
 ```
 
-잠깐 이게 개 같은게
+이러면 Programmer는 Person을 상속하게 된다
 
-prototype을 안 가르키고 그냥 쳐 쓰고 있는게 너무 ㅈ같은데??
+Programmer의 prototye에 Person 생성자 객체를 담는거임
 
-아마 상속이라는 개념을 아예 모르는 애들한태 prototype을 먼저 가르치면 개판 날테니
+## 3. 기능의 추가
 
-그러는거라고 이해는 되는데
+단순히 부모의 기능을 담기만 하면 상속을 할 이유가 없음
 
-나같이 자바를 통해 어느정도 아는 사람한태는 이게 더 헷갈리는 듯?
+해당 로직을 추가, 수정 정도는 할 수 있어야 상속의 의미가 있는거임
 
-우선 [prototype](https://github.com/lugia574/diary/blob/main/study/JavaScript/md/3.%20%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5/6.%20prototype/prototype.md) 을 먼저 배우고 여기로 다시 돌아가자
+```js
+function Person(name) {
+  this.name = name;
+}
+Person.prototype.name = null;
+Person.prototype.introduce = function () {
+  return "My name is " + this.name;
+};
+
+function Programmer(name) {
+  this.name = name;
+}
+Programmer.prototype = new Person();
+
+// 기능 추가
+Programmer.prototype.coding = function () {
+  return "hello world";
+};
+
+// 기능 수정
+Programmer.prototype.introduce = function () {
+  return "My name is " + this.name, "WWWW";
+};
+
+var p1 = new Programmer("egoing");
+document.write(p1.introduce() + "<br />");
+document.write(p1.coding() + "<br />");
+```
