2022_0914 객체와 함수

--- a/study/JavaScript/md/3. 객체지향/8. 객체 간의 상속/객체 간의 상속.md
+++ b/study/JavaScript/md/3. 객체지향/8. 객체 간의 상속/객체 간의 상속.md
@@ -121,3 +121,5 @@ super 객체인 kim 으로 올라가 거기 sum() 을 쓰는거임
 여기서 this 는 kim 의 this 가 아니라 lee의 this임
 
 그래서 lee 값에 맞게 잘 작동하는거임
+
+## 5. prototype vs \_\_proto\_\_
