2022_0914 객체와 함수

--- a/study/JavaScript/md/3. 객체지향/8. 객체 간의 상속/객체 간의 상속.md
+++ b/study/JavaScript/md/3. 객체지향/8. 객체 간의 상속/객체 간의 상속.md
@@ -123,3 +123,94 @@ super 객체인 kim 으로 올라가 거기 sum() 을 쓰는거임
 그래서 lee 값에 맞게 잘 작동하는거임
 
 ## 5. prototype vs \_\_proto\_\_
+
+자바스크립트에서 함수는 사실 `객체`다
+
+일반적인 언어에서 함수는 [Statement](https://wisdom-and-record.tistory.com/65) 라고 부름
+
+js에서 함수는
+
+```js
+let fnc = new function();
+```
+
+이렇게 표현할 수 있음
+
+그래서 js의 함수는 객체기 때문에 property 를 가질수 있음
+
+---
+
+자
+
+```js
+function Person(name, first, second) {
+  this.name = name;
+  this.first = first;
+  this.second = second;
+}
+```
+
+이런 함수를 정의함
+
+이럼 저 함수에 해당되는 Person이라는 객체가 생성이 됨
+
+근데 객체가 하나 더 생김
+
+바로 Person's prototype 객체임
+
+결국 함수를 정의하면 두개의 객체가 생기는거임
+
+![그림](/study/JavaScript/pic/prototypeVS__proto__.png)
+
+이 둘은 서로 연관되어 있음
+
+그렇기에 Person 이란 객체는
+
+prototype이라는 property가 생김 이 프로퍼티는 Person's prototype 를 가리킴
+
+마찬가지로 Person's prototype 객체도
+
+constructor 라는 property를 가지고 Person을 가리킴
+
+```js
+Person.prototype.sum = function () {};
+```
+
+이렇게 하면 자연스럽게 Person's prototype 객체에 sum 이 들어감
+
+```js
+let kim = new Person("kim", 10, 20);
+let lee = new Person("kim", 10, 20);
+```
+
+이렇게 새 객체를 생성을 하면
+
+```js
+this.name = name;
+this.first = first;
+this.second = second;
+```
+
+kim, lee 에 해당 constructor function 이 실행되면서
+
+this 값들이 세팅이 되고
+
+`__proto__` 프로퍼티가 생긴다
+
+`__proto__` 는 Person's prototype 객체 를 가리킴
+
+```js
+console.log(kim.name);
+```
+
+을 하면 kim 내에서 찾아서 있으니까 그대로 출력을 할것이고
+
+```js
+kim.sum();
+```
+
+이렇게 kim 객체에 없는 걸 호출하면
+
+`__proto__` 를 통해서
+
+Person's prototype 객체로 가 sum을 실행할것이다
