--- a/study/JavaScript/md/4. extra part/extra 3. promise/1. Promise.md
+++ b/study/JavaScript/md/4. extra part/extra 3. promise/1. Promise.md
@@ -102,7 +102,11 @@ getData()
 
 여기서 `then` 은 말 그대로 그 담에 수행할 콜백 함수임
 
-    then 메소드는 두 개의 콜백 함수를 인자로 전달 받는다. 첫 번째 콜백 함수는 성공(fulfilled, resolve 함수가 호출된 상태) 시 호출되고 두 번째 함수는 실패(rejected, reject 함수가 호출된 상태) 시 호출된다.
+    then 메소드는 두 개의 콜백 함수를 인자로 전달 받는다.
+
+    첫 번째 콜백 함수는 성공(fulfilled, resolve 함수가 호출된 상태) 시 호출되고
+
+    두 번째 함수는 실패(rejected, reject 함수가 호출된 상태) 시 호출된다.
 
     then 메소드는 Promise를 반환한다.
 
