--- a/study/JavaScript/md/4. extra part/extra 3. promise/1. Promise.md
+++ b/study/JavaScript/md/4. extra part/extra 3. promise/1. Promise.md
@@ -78,13 +78,46 @@ getData(function (tableData) {
 
 `promise` 를 쓰게 되면 이렇게 된다.
 
+## 3. promise 사용법
+
+```js
+// Promise 객체의 생성
+const promise = new Promise((resolve, reject) => {
+  // 비동기 작업을 수행한다.
+
+  if (/* 비동기 작업 수행 성공 */) {
+    resolve('result');
+  }
+  else { /* 비동기 작업 수행 실패 */
+    reject('failure reason');
+  }
+});
+
+
+promise.then((data)=>console.log(data))
+```
+
+프로미스는 Promise 생성자 함수를 통해 인스턴스화한다.
+
+Promise 생성자 함수는 비동기 작업을 수행할 콜백 함수를 인자로 전달받는데
+
+이 콜백 함수는 resolve와 reject 함수를 인자로 전달받는다.
+
+근데 보통은 이렇게 쓰지 않고 함수의 리턴에 쓴다.
+
 ```js
 function getData(callback) {
   // new Promise() 추가
   return new Promise(function (resolve, reject) {
     $.get("url 주소/products/1", function (response) {
       // 데이터를 받으면 resolve() 호출
+      if(/* 비동기 작업 수행 성공 */) {
       resolve(response);
+      }
+      //안되면 reject() 호출
+      else{
+        eject('failure reason');
+      }
     });
   });
 }
@@ -123,24 +156,40 @@ getData()
 이 3개를 이용하면 대충 이럼
 
 ```js
-function getData() {
-  return new Promise({
+function getData(homePagelink) {
+  return new Promise(function(resolve, reject){
     // ...
+    if(/*어떤 조건*/){
+      resolve('성공값')
+    }else{
+      reject("REEOR")
+    }
+  });
+}
+
+function nextfnc() {
+  return new Promise((resolve, reject)=>{
+    // ...
+    if(/*어떤 조건*/){
+      resolve('성공값')
+    }else{
+      reject("REEOR")
+    }
   });
 }
 
 // then() 으로 여러 개의 프로미스를 연결한 형식
-getData()
+getData(homePagelink)
   .then(function (data) {
+    return nextfnc(data);
+  })
+  .then((nextfnc) => {
+    return nextfnc2(nextfnc)
+  })
+  .then((nextfnc2)=> {
     // ...
   })
-  .then(function () {
-    // ...
-  })
-  .then(function () {
-    // ...
-  })
-  .catch(function (err) {
+  .catch((err) => {
     // ... 에러 떳을때 수행할 코드
   })
   .finally(function () {
@@ -148,7 +197,7 @@ getData()
   });
 ```
 
-### Promise 심화
+### 4. Promise 심화
 
 여러개의 promise 가 얽혀 있는 코드(`promise chaining`)를 보자
 
