--- a/study/JavaScript/md/4. extra part/extra 1. Excute context & Closuer/1. Execute context & Closure .md
+++ b/study/JavaScript/md/4. extra part/extra 1. Excute context & Closuer/1. Execute context & Closure .md
@@ -11,6 +11,8 @@
 
 [JavaScript - Execute context](https://www.youtube.com/watch?v=QtOF0uMBy7k)
 
+[모던 자바스크립트 - 실행컨텍스트와 js 동작원리](https://poiemaweb.com/js-execution-context)
+
 [자바스크립트 - 스코프 체인(scope chain)란?](https://ljtaek2.tistory.com/140)
 
 [JavaScript - closure](https://www.youtube.com/watch?v=bwwaSwf7vkE&t=8s)
@@ -19,9 +21,24 @@
 
 ## 1. Execute context
 
----
-
     실행 컨텍스트(Execution context)는 우리가 작성한 코드가 실행되는 환경
+
+여기서 실행 가능한 코드는
+
+- 전역 코드: 전역 영역 내에 코드
+- Eval 코드: eval 함수로 실행되는 코드 > 이젠 안쓰이는듯[출처](https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference/Global_Objects/eval)
+- 함수 코드: 함수 내에 존재하는 코드
+
+자바스크립트 엔진은 코드를 실행하기 위하여 실행에 필요한 여러가지 정보를 알고 있어야 한다.
+
+실행에 필요한 여러가지 정보란 아래와 같은 것들이 있다.
+
+- 변수 : 전역변수, 지역변수, 매개변수, 객체의 프로퍼티
+- 함수 선언
+- 변수의 유효범위(Scope)
+- this
+
+### 예시 1
 
 ```js
 n0 = "n0";
