--- a/study/JavaScript/md/4. extra part/extra 1. Excute context & Closuer/2. Browser js 동작원리.md
+++ b/study/JavaScript/md/4. extra part/extra 1. Excute context & Closuer/2. Browser js 동작원리.md
@@ -1,6 +1,6 @@
-# JavaScript 동작원리
+# 브라우저 JavaScript 동작원리
 
-[출처: JavaScript 동작원리](https://www.youtube.com/watch?v=v67LloZ1ieI)
+[출처: 브라우저 JavaScript 동작원리](https://www.youtube.com/watch?v=v67LloZ1ieI)
 
 [출처: JavaScript 비동기 핵심 Event Loop 정리](https://medium.com/sjk5766/javascript-%EB%B9%84%EB%8F%99%EA%B8%B0-%ED%95%B5%EC%8B%AC-event-loop-%EC%A0%95%EB%A6%AC-422eb29231a8)
 
