--- a/diary/2022_12/18.md
+++ b/diary/2022_12/18.md
@@ -78,8 +78,58 @@
 
 뭘 하고 싶냐? 음 AI 채팅 어플 어떰?
 
-저번에 대충 했던 AI 채팅 그거 그대로 가져다가 하면 될듯?
+저번에 대충 했던 랜덤 채팅앱 그거 그대로 가져다가 하면 될듯?
 
 간단하고 말이야
 
-우선 그렇게 해볼까?
+그래 우선 한다고 치고
+
+그럼 하루 내가 해야할꺼 체크를 하면
+
+1. 하루 알고리즘 하나 풀기
+
+2. 개인 프로젝트 하기?
+
+3. 면접용 지식 하나 외우기?
+
+이렇게 할까?
+
+흠흠흠흠
+
+- 웹 >> 모바일 사이즈 조정 >> 반응형 웹사이트 구현
+
+- 보안
+
+## 12-19
+
+랜덤 매칭 웹, 모바일 프로젝트를 하기 위해서 필요한 기능이 무엇일까?
+
+1. 반응형 홈페이지 구현
+
+2. 채팅 기능
+
+   - 랜던 매칭 기능
+
+   - 대화 상대 없을 시 API 를 이용한 AI 대화
+
+   - 채팅방 생성
+
+   - 실시간 대화 기능
+
+   - 대화 저장?
+
+3. 프로필 기능
+
+그럼 이걸 구현하는데 필요한 기술들
+
+1. reactJS? nodeJS?
+
+2. PUG?, JavaScript, Sass?
+
+3. Socket.io 라이브러리
+
+우선 참고 사이트
+
+https://geundung.dev/62?category=719250
+
+https://socket.io/
