--- a/study/SpringBoot/md/2. 기본구조/프로젝트 구조.md
+++ b/study/SpringBoot/md/2. 기본구조/프로젝트 구조.md
@@ -1,6 +1,6 @@
-# 기본구조
+# 2. 기본구조
 
-## 프로젝트 구조
+## 2.1 프로젝트 구조
 
 1. src/main/java 디렉터리
 
@@ -41,3 +41,212 @@
    프로젝트를 위해 필요한 플러그인과 라이브러리 등을 기술한다.
 
    그레이들(Gradle)이 사용하는 환경 파일이다.
+
+## 2.2 컨트롤러
+
+```java
+package com.mysite.sbb;
+
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.GetMapping;
+
+@Controller
+public class MainController {
+
+    @GetMapping("/sbb")
+    public void index() {
+        System.out.println("index");
+    }
+
+}
+```
+
+@Controller 애너테이션을 적용하면 MainController 클래스는 스프링부트의 컨트롤러가 된다.
+
+그리고 메서드의 @GetMapping 애너테이션은 요청된 URL과의 매핑을 담당한다
+
+근데 이러면 오류 남 (500 오류코드)
+
+print 함수는 실행되지만 브라우저에 보내주는 res 값이 없어서 오류가 뜨는거임
+
+그러니까 응답을 리턴해줘야함
+
+```java
+package com.mysite.sbb;
+
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ResponseBody;
+
+@Controller
+public class MainController {
+
+    @GetMapping("/sbb")
+    @ResponseBody
+    public String index() {
+        return "index";
+    }
+}
+```
+
+이러면 브라우저에 index 를 띄우고 오류없음
+
+## 2.3 JPA
+
+보통 웹을 서비스 할때 DB 랑 연동해서 한다
+
+그리고 값을 주고 받아 DB 에 이를 기록할때 DB 에 맞는 쿼리문 스크립트를 짠다
+
+이러한 과정이 복잡한데
+
+`ORM`(object relational mapping)을 이용하면 개발자가 쿼리를 직접 작성하지 않아도 데이터베이스의 데이터를 처리할 수 있다.
+
+ORM을 이용하면 데이터베이스 종류에 상관 없이 일관된 코드를 유지할 수 있어서 프로그램을 유지·보수하기가 편리하다.
+
+또한 내부에서 안전한 SQL 쿼리를 자동으로 생성해 주므로 개발자가 달라도 통일된 쿼리를 작성할 수 있고 오류 발생률도 줄일 수 있다.
+
+JPA 란?
+
+    스프링부트는 JPA(Java Persistence API)를 사용하여 데이터베이스를 처리한다.
+
+    JPA는 자바 진영에서 ORM(Object-Relational Mapping)의 기술 표준으로 사용하는 인터페이스의 모음
+
+> JPA는 인터페이스이다. <br>
+> 따라서 인터페이스를 구현하는 실제 클래스가 필요하다. <br>
+> JPA를 구현한 대표적인 실제 클래스에는 하이버네이트(Hibernate)가 있다. <br>
+> SBB도 JPA + 하이버네이트 조합을 사용한다.
+
+---
+
+설치 개같네 ㄹㅇ
+
+이걸로 또 시간 존나 잡아먹음 시벌
+
+## 2.4 엔티티
+
+    엔티티는 데이터베이스 테이블과 매핑되는 자바 클래스를 말한다.
+
+질문과 답변에 해당하는 엔티티를 만들어보자
+
+```java
+package com.mysite.sbb;
+
+import java.time.LocalDateTime;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+@Entity
+public class Question {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Integer id;
+
+    @Column(length = 200)
+    private String subject;
+
+    @Column(columnDefinition = "TEXT")
+    private String content;
+
+    private LocalDateTime createDate;
+}
+```
+
+- 엔티티로 만들기 위해 Question 클래스에 @Entity 애너테이션을 적용
+
+- @Id 애너테이션은 id 속성을 기본 키로 지정
+
+- @GeneratedValue 애너테이션을 적용하면 데이터를 저장할 때 해당 속성에 값을 따로 세팅하지 않아도 1씩 자동으로 증가
+
+  strategy는 고유번호를 생성하는 옵션으로 GenerationType.IDENTITY는 해당 컬럼만의 독립적인 시퀀스를 생성하여 번호를 증가시킬 때 사용
+
+- @Column 컬럼의 세부 설정을 위해
+
+  length는 컬럼의 길이를 설정할때 사용하고 columnDefinition은 컬럼의 속성을 정의할 때 사용
+
+  columnDefinition = "TEXT"은 "내용"처럼 글자 수를 제한할 수 없는 경우에 사용
+
+        엔티티와 Setter
+        일반적으로 엔티티에는 Setter 메서드를 구현하지 않고 사용하기를 권한다.
+
+        왜냐하면 엔티티는 데이터베이스와 바로 연결되어 있으므로 데이터를 자유롭게 변경할 수 있는 Setter 메서드를 허용하는 것이
+
+        안전하지 않다고 판단하기 때문이다.
+
+        그렇다면 Setter 메서드 없이 어떻게 엔티티에 값을 저장할 수 있을까?
+
+        엔티티를 생성할 경우에는 롬복의 @Builder 어노테이션을 통한 빌드패턴을 사용하고,
+
+        데이터를 변경해야 할 경우에는 그에 해당되는 메서드를 엔티티에 추가하여 데이터를 변경하면 된다.
+
+        다만, 이 책은 복잡도를 낮추고 원활한 설명을 위해 엔티티에 Setter 메서드를 추가하여 진행하려 한다.
+
+다음은 대답 엔티티
+
+```java
+package com.mysite.sbb;
+
+import java.time.LocalDateTime;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+
+public class Answer {
+	@Id
+	@GeneratedValue(strategy = GenerationType.IDENTITY)
+	private Integer id;
+
+	@Column(columnDefinition = "TEXT")
+	private String content;
+
+    @CreatedDate
+	private LocalDateTime createDate;
+
+    @ManyToOne
+    private Question question;
+}
+```
+
+question 속성은 답변 엔티티에서 질문 엔티티를 참조하기 위해 추가했다.
+
+예를 들어 답변 객체(예:answer)를 통해 질문 객체의 제목을 알고 싶다면 answer.getQuestion().getSubject()처럼 접근할 수 있다.
+
+하지만 이렇게 속성만 추가하면 안되고 질문 엔티티와 연결된 속성이라는 것을 명시적으로 표시해야 한다.
+
+그래서 question 속성에 @ManyToOne 애너테이션을 추가함
+
+반대방향, 즉 Question 엔티티에서 Answer 엔티티를 참조할수 있음
+
+```java
+@OneToMany(mappedBy = "question", cascade = CascadeType.REMOVE)
+    private List<Answer> answerList;
+```
+
+@OneToMany 애너테이션에 사용된 mappedBy는 참조 엔티티의 속성명을 의미한다.
+
+즉, Answer 엔티티에서 Question 엔티티를 참조한 속성명 question을 mappedBy에 전달해야 한다.
+
+question 인 이유는
+
+테이블의 컬럼명
+위의 Question 엔티티에서 작성일시에 해당하는 createDate 속성의 실제 테이블의 컬럼명은 create_date가 된다.
+
+즉 createDate처럼 대소문자 형태의 카멜케이스(Camel Case) 이름은 create*date 처럼 모두 소문자로 변경되고 언더바(*)로 단어가 구분되어
+
+실제 테이블 컬럼명이 된다.
+
+## 2.5 리포지터리
+
+엔티티만으로는 데이터베이스에 데이터를 저장하거나 조회 할 수 없다.
+
+데이터 처리를 위해서는 실제 데이터베이스와 연동하는 JPA 리포지터리가 필요하다.
