--- a/study/오픽/설문.md
+++ b/study/오픽/설문.md
@@ -2,7 +2,9 @@
 
 ## 1. 난이도 추천
 
-5-5
+5-5 난이도 추천
+
+근데 IM 은 좀 낮춰도 되지 않을까? 라는 생각 중~
 
 ## 2. 설문
 
@@ -52,6 +54,10 @@
 
 1. 빠른 비교 :: 예전에는 ~~ 했는데 요새는 ~~ 해서 너무 조타?
    > I never did this before, but nowdays, i just love doing this
+
+- I always make sure to bring OOO
+
+- Evert time ~ I always check to see ~ that i
 
 ## Extra. 좋은 표현
 
