--- a/study/오픽/설문.md
+++ b/study/오픽/설문.md
@@ -50,7 +50,14 @@
 7. 솔직한 변명은 나중에 하기. 처음 부분에서 하지 않기
    > 바로 본론 우선 박으라고
 
-## habit 전략
+## 질문 레파토리
+
+- 설명
+- 과거경험 설명
+- 습관
+- 롤플레이
+
+### 1. habit 전략
 
 1. 빠른 비교 :: 예전에는 ~~ 했는데 요새는 ~~ 해서 너무 조타?
    > I never did this before, but nowdays, i just love doing this
