--- a/study/오픽/0. 설문.md
+++ b/study/오픽/0. 설문.md
@@ -19,12 +19,12 @@
 
 ### 2. 1이렇게 설문 자주 나오는 문제
 
-음악감성
-집에서 보내는 휴가, 국내/ 해외여행중 1개
-개인주택이나 아파트 관한 문제
-영화보기
-공원가기
-쇼핑하기 or ?? or ??
+- 음악감성
+- 집에서 보내는 휴가, 국내/ 해외여행중 1개
+- 개인주택이나 아파트 관한 문제
+- 영화보기
+- 공원가기
+- 쇼핑하기 or tv or 리얼리티쇼?
 
 음악 >> 어떤 영화에서 나오는 ost 가 감동적이라서
 
