--- a/study/오픽/0. 설문.md
+++ b/study/오픽/0. 설문.md
@@ -73,3 +73,5 @@ it makes me feel + 동사 :: 그것 때문에 ~ 하게 돼
 I felt like ~, I think ~~ >> 그때 나의 판단, 감정등을 말하는거라 쓰면 좋데
 
 stand out >> 눈에 뛰다
+
+all about ~ >> ~ 가 가장 중요하다
