--- a/study/면접 지식/java/1. 자바 동작원리.md
+++ b/study/면접 지식/java/1. 자바 동작원리.md
@@ -18,7 +18,11 @@
 
    JVM 메모리에 올림
 
-1. 그리고 `실행엔진(Execution Engine)`이 JVM 에 있는 바이크 코드들을 하나씩 가져와 실행함
+1. 그리고 `실행엔진(Execution Engine)`이 JVM 에 있는 바이크 코드들을 하나씩 가져와 실행하면서
+
+   그때 그때 필요한 클래스들을 클래스로더에게 요청함
+
+   > 클래스로더가 다 메모리에 올리는게 아님 메모리 낭비를 줄이기 위해
 
 ## JVM (Java Virtual Machine)
 
@@ -38,6 +42,66 @@
 
   3. 실행 엔진
 
----
+### 클래스 로더
+
+클래스 로더란?
+
+     Java 클래스를 로드하는 역할을 한다. 클래스 로더에는 로딩, 링크, 초기화 단계로 나뉘어져 있음
+
+클래스를 로드 할때는 parent-first/child-last의 순서로 로드
+
+캐시->부모->자식의 순서로 클래스 로딩됨
+
+- 로딩
+
+  .class 파일을 jvm 메모리에 로드하는 과정임
+
+- 링킹
+
+  링크는 3가지로 나뉨
+
+  1. 검증
+
+     바이트코드가 제대로 규칙을 준수되어 있는 검사
+
+  1. 준비
+
+     클래스파일이 필요로 하는 메모리의 양을 할당해줌
+
+  1. 분석
+
+     클래스파일이 참조하는 객체에 대해서 실제 메모리 주소값을 대입
+
+- 초기화
+
+  클래스 안에 있는 `Static` 변수 및 메소드를 할당, 초기화 시키는 거
+
+#### 클래스 로더 계층 구조
+
+![클래스로더 사진](/study/pic/classLoader.png)
+
+1. 부트스트랩 클래스 로더 (Bootstrap Class Loader)
+
+   JVM 시작 시 가장 최초로 실행되는 클래스 로더
+
+   자바의 기본적인 클래스를 로드하게됨
+
+2. 확장 클래스 로더 (Extension Class Loader)
+
+   자바 기본 클래스를 제외한 확장된 클래스를 로드
+
+3. 시스템 클래스 로더 (System Class Loader)
+
+   자바를 실행할때 사용자가 지정한 classPath 거기 클래스를 로드함
+
+4. 유저 지정 클래스 로더 (User-defined Class loader)
+
+   직접 작성한 class를 로드
+
+#### 위임 모델
+
+## 레퍼런스
 
 출처 - [JVM 동작원리 및 기본개념](https://steady-snail.tistory.com/67)
+
+출처 - [[Java] JVM의 클래스 로더란\_](https://steady-coding.tistory.com/593)
