--- a/study/면접 지식/java/1. 자바 동작원리.md
+++ b/study/면접 지식/java/1. 자바 동작원리.md
@@ -100,6 +100,48 @@
 
 #### 위임 모델
 
+바이트코드를 넘겨 받은 클래스 로더가 필요한 클래스들을 로드할때
+
+요청 받는 순서
+
+1. 클래스 로더 캐시
+
+   이전에 로드된 클래스인지 클래스 로더 캐시를 확인
+
+1. 상위 클래스 로더
+
+   없으면 상위 클래스를 하나씩 거슬러 올라감
+
+1. 자기 자신
+
+   부트스트랩 클래스로더 까지 올라갔는데 없으면 자기자신
+
+#### 가시성 제한
+
+클래스 로드를 요청 받았을때 위임 모델에 의해서 막 찾고 있을때
+
+(클래스 로더 캐시에서부터 상위 클래스 로더들을 확인 하는 과정)
+
+이때 하위 클래스 로더에 있는 클래스는 확인이 불가능함
+
+#### 언로드(Unload) 불가
+
+클래스를 로드 하는 건 쌉 가능이지만
+
+`언로드(Unload)` 하는 것은 불가능
+
+#### 이름 공간(Name Space)
+
+<!-- 로드된 클래스들을 보관하는 공간?? -->
+
+위임 모델을 통해 클래스들을 확인하는데에 공간이 여기임
+
+보관 기준은 (Full Qualified Class Name) 패키미명까지 포함된 식별자를 뜻함
+
+---
+
+이렇게 해서 Runtime Data Area 로 로드 시킴
+
 ## 레퍼런스
 
 출처 - [JVM 동작원리 및 기본개념](https://steady-snail.tistory.com/67)
