--- a/study/면접 지식/java/1. 자바 동작원리.md
+++ b/study/면접 지식/java/1. 자바 동작원리.md
@@ -10,7 +10,11 @@
 
    > 확장자 ###.java
 
-1. 자바 컴파일러를 통해 `자바 바이트코드 (java Byte Code)` 로 바꿈
+1. 어플리케이션이 실행되면 JVM 이 OS로부터 메모리를 할당 받음
+
+   JVM 은 할당 받은 메모리를 용도에 따라 구분 관리
+
+1. 자바 컴파일러가 소스 파일을 `자바 바이트코드 (java Byte Code)` 로 바꿈
 
 1. 컴파일된 바이트코드를 `JVM` 의 `클래스로더(Class Loader)` 로 전달되고
 
@@ -140,10 +144,10 @@
 
 ---
 
-이렇게 해서 Runtime Data Area 로 로드 시킴
+이렇게 ClassLoader 를 통해 바이트 코드를 메모리 영역인 Runtime Data Area 로 로드 시킴
 
 ## 레퍼런스
 
-출처 - [JVM 동작원리 및 기본개념](https://steady-snail.tistory.com/67)
+- [JVM 동작원리 및 기본개념](https://steady-snail.tistory.com/67)
 
-출처 - [[Java] JVM의 클래스 로더란\_](https://steady-coding.tistory.com/593)
+- [[Java] JVM의 클래스 로더란?](https://steady-coding.tistory.com/593)
