--- a/study/면접 지식/java/2. 자바 메모리 영역.md
+++ b/study/면접 지식/java/2. 자바 메모리 영역.md
@@ -1,3 +1,106 @@
-# 자바 메모리 영역
+# 자바 메모리 영역(Runtime Data Area)
 
 즉 자바 `Runtime Data Area` 에 대해 알아보자
+
+크게 5가지로 구성되어 있음
+
+- Method Area
+
+- Heap Area
+
+- Stack Area
+
+- PC Register
+
+- Native Method Stack
+
+## Method Area
+
+    static 으로 선언된 변수들을 포함하여 Class 레벨의 모든 데이터가 이곳에 저장됨
+
+- JVM 마다 단 하나의 메소드 영역을 가짐
+
+- 메소드 영역에는 Runtime Constant Pool 이라는 별도의 영역이 존재
+
+> 상수 자료형을 저장하여 참조하는 역활
+
+- 저장되는 정보의 종류
+
+  - Field Info : 멤버 변수 이름, 데이터 타입, 접근 제어자 정보
+
+  - Method Info : 메소드 이름, Return 타입, 매개변수, 접근 제어자 정보
+
+  - Type Info : Class 인지 InterFace인지 여부 저장, Type 속성, 이름, Super Class 이름
+
+- Heap 과 마찬가지로 GC 관리 대상임
+
+## Heap Area (java 8)
+
+    객체를 저장하기 위한 메모리 영역
+
+new 연산자로 생성된 모든 오브젝트, 인스턴스 변수 그리고 배열을 저장
+
+Heap 영역은 물리적으로 2개의 영역으로 구분 할 수 있음
+
+- Young Generation
+
+  생명주기가 짧은 객체를 GC 대상으로 하는 영역
+
+  Eden 에 할당 후 Survivor 0과 1을 거쳐 오래 사용되는 객체를
+
+  Old Generation으로 이동 시킴
+
+- Old Generation
+
+  생명주기가 긴 객체를 GC 대상으로 하는 영역
+
+Garbage Collection 생명주기에 의해 지속적으로 메모리가 저장됨
+
+- Minor GC
+
+- Major GC
+
+메소드 영역과 힙 영역은 여러 스레드들 간에 공유되는 메모리임
+
+## Stack Area
+
+    각 스레드를 위한 분리된 Runtime Stack 영역
+
+메소드를 호출할 때 마다 Stack Frame 으로 불리는 Entry 가 Stack 영역에 생성됨
+
+스레드 역활이 종료되면 바로 소멸 되는 데이터들을 저장
+
+각종 형태의 변수나 임시 데이터, 스레드 또는 메소드의 정보를 저장
+
+## Pc Register
+
+    Pc 는 Program Counter 의 줄임말
+
+    각 스레드가 시작될때 생성되며, 현재 실행중인 정보를 저장하는 영역
+
+쓰레드가 로직 처리하면서 지속적으로 갱신됨
+
+쓰레드가 생성될 때마다 하나씩 존재함
+
+어떤 명령을 실행해야 할지에 대한 기록
+
+(현재 수행중인 부분 주소를 가짐)
+
+## Native Method Stack
+
+    바이트 코드가 아닌 실제 실행할 수 있는 기계어로 작성된 프로그램을 실행 시키는 영역
+
+    또한 Java 가 아닌 다른 언어로 작성된 코드를 위한 영역
+
+`Java Native InterFace(JNI)` 를 통해 바이트 코드로 전화하여 저장
+
+> 다른 언어로 만들어진 어플리케이션과 상호 작용할 수 잇는 인터페이스 제공 <br>
+> 실질적을 작동하는건 C/ C++ 이거 2개
+
+각 스레드 별로 생성됨
+
+## 레퍼런스
+
+- [자바 메모리 구조 뿌시기 [ JVM이란? ]](https://www.youtube.com/watch?v=AWXPnMDZ9I0&t=199s)
+
+- [자바(Java) 메모리 구조 소개 [ 자바(Java) ]](https://www.youtube.com/watch?v=zta7kVTVkuk&t=29s)
