--- a/study/면접 지식/computerScience/객체지향프로그래밍.md
+++ b/study/면접 지식/computerScience/객체지향프로그래밍.md
@@ -14,6 +14,8 @@
 
   확장에는 열려 있어야 하고 변경에는 닫혀 있어야 한다.
 
+  > 기존의 코드를 변경하지 않으면서, 기능을 추가할 수 있도록 설계가 되어야 한다는 원칙
+
 - LSP(Liskov Substitution Principle) : 리스코프 치환 원칙
 
   상위 타입의 객체를 하위 타입의 객체로 치환해도 상위 타입을 사용하는 프로그램은 정상적으로 동작해야 한다.
@@ -22,6 +24,13 @@
 
   인터페이스는 그 인터페이스를 사용하는 클라이언트를 기준으로 분리해야 한다.
 
+  > 범용적인 인터페이스 보다는 클라이언트(사용자)가 실제로 사용하는 Interface를 만들어야 한다는 의미로, <br>
+  > 인터페이스를 사용에 맞게 끔 각기 분리해야한다는 설계 원칙
+
 - DIP(Dependency Inversion Principle) : 의존 역전 원칙
 
   고수준 모듈은 저수준 모듈의 구현에 의존해서는 안된다.
+
+  > 상위 모듈은 하위 모듈에 의존해서는 안 되고 둘 다 추상화에 의존해야 한다.
+
+  - [의존 역전 원칙 참고자료](https://blog.itcode.dev/posts/2021/08/17/dependency-inversion-principle)
