--- a/study/면접 지식/java/0. 자바.md
+++ b/study/면접 지식/java/0. 자바.md
@@ -54,4 +54,54 @@ JAVA 는 썬 마이크로시스템즈의 제임스 고슬링의 주도로 만들
 
    이것은 인터페이스가 모든 인스턴스 변수와 도구의 실행문을 배제한 채 객체 간의 상호 작용을 정의하기 때문
 
-출처 - [점프 투 자바](https://wikidocs.net/199)
+## 버전
+
+자바는 6개월 마다 새로운 버전을 내는데
+
+3년 단위로 유지보수를 지원해주는 `LTS(Long Term Support)` 라는 버전을 냄
+
+현재는 자바 8, 11, 17 버전이 LTS 임
+
+### java 8 특징
+
+1. 람다 표현식(Lambda)
+
+   함수형으로 프로그래밍 가능해짐
+
+2. Stream
+
+   for, while 과 같이 반복문 방법. 병렬처리가 가능
+
+3. Interface 기능 추가
+
+   default 라는 메소드가 생겼는데 인터페이스 안에 공통으로 사용하는 함수를 미리 정의할 수 있음
+
+4. optional
+
+   null 이 될 수 있는 객체를 표현하는 레퍼 클래스
+
+### java 11 특징
+
+1. String, File 에 메소드 추가
+
+2. 람다에서도 var 를 쓸 수 있게 됨
+
+   var 는 어떤 클래스를 쓰는지 명시 안해도 위꺼 찾아서 인식을 하는 클래스임
+
+   ```java
+   // ex
+   A test = new A();
+   String result = sampleList.stream().map((var x) -> x.toUpperCase()) ~~
+   ```
+
+3. HTTPClient 추가
+
+   이전에는 HTTP 통신을 하는데에 아파치 라이브러리를 사용했었는데
+
+   이번에 자바가 공식적으로 지원 해준거
+
+## 레퍼런스
+
+[점프 투 자바](https://wikidocs.net/199)
+
+[[개발자 면접 질문] 자바 - 버전 특징](https://www.youtube.com/watch?v=_6YP2FNTt80)
