--- a/study/면접 지식/DataStructure/5. Graph.md
+++ b/study/면접 지식/DataStructure/5. Graph.md
@@ -1,5 +1,21 @@
 # Graph
 
+트리 구조 역시 그래프의 일종. (사이클이 허용되지 않은 그래프)
+
+- Undirected Graph: 말 그대로 정점과 간선의 연결관계에 있어서 방향성이 없는 그래프
+
+- Directed Graph: 간선에 방향성이 포함되어 있는 그래프
+
+## 그래프 탐색
+
+- DFS 깊이 우선 탐색
+
+- BFS 넓이 우선 탐색
+
 ## 레퍼런스
+
+- [그래프](https://github.com/JaeYeopHan/Interview_Question_for_Beginner/tree/master/DataStructure#graph)
+
+- [[자료구조 알고리즘] Graph 검색 DFS, BFS 구현 in Java](https://www.youtube.com/watch?v=_hxFgg7TLZQ&t=513s)
 
 - [[자료구조 알고리즘] 그래프(Graph)에 대해서](https://www.youtube.com/watch?v=fVcKN42YXXI)
