--- a/study/오픽/4. 영화보기.md
+++ b/study/오픽/4. 영화보기.md
@@ -1,5 +1,21 @@
 # 영화
 
+- 좋아하는 영화 장르와 이유 \*`빈출`
+
+- 가장 좋아하는 영화배우 \*`빈출`
+
+- 자주 가는 영ㅇ화관과 이유
+
+- 영화보기 전, 후에 하는 일 \*`빈출`
+- 영화 보러 가는 시간, 빈도, 사람
+
+- 기억에 남는 영화 \*`빈출`
+- 최근에 본 영화
+- 처음 본 영화
+- 영화관에서 다른 관객 때문에 불쾌했던 경험
+
+- 과거와 현재 영화의 차이점
+
 ## 좋아하는 영화 장르와 이유
 
 My favorite movie is action movie.
