--- a/study/오픽/3. 공원 스크립트.md
+++ b/study/오픽/3. 공원 스크립트.md
@@ -1,5 +1,15 @@
 # 공원 스크립트
 
+- 공원 모습 묘사 \*`빈출`
+- 공원에 있는 사람들 묘사
+
+- 공원에 주로 하는 일 \*`빈출`
+- 공원에 가는 빈도, 하는 일 \*`빈출`
+- 공원에 갈 때 가지고 가는 것
+- 추천하고 싶은 공원
+- 공원에서 있었던 뜻밖의 경험 \*`빈출`
+- 최근에 공원에 간 경험
+
 ## 1. 좋아하는 공원
 
 My favorite park?
