--- a/study/오픽/0. 설문.md
+++ b/study/오픽/0. 설문.md
@@ -1,5 +1,7 @@
 # 오픽
 
+https://www.youtube.com/watch?v=GqznyqWi8Mg
+
 ## 1. 난이도 추천
 
 5-5 난이도 추천
@@ -11,11 +13,11 @@
 1. 일경험 없음
 2. 학생 아님
 3. 수강 후 5년 이상 지남
-4. 개인 주택 /홀로 삼
-5. 영화/ 공원/ 공연/ 리얼리티 쇼 or tv / 콘서트/ 해변가기
-6. 음악 감상
+4. 아파트 /가족가 같이 삼
+5. 영화/ 공원/ 공연/ 리얼리티 쇼 or tv/ 쇼핑/ 카페/ 해변가기
+6. 음악 감상/ 요리하기
 7. 조깅/ 걷기/ 운동을 전혀 하지 않음
-8. 집에서 보내는 휴가/ 국내여행/ 해외여행
+8. 집에서 보내는 휴가/ 국내여행
 
 ### 2. 1이렇게 설문 자주 나오는 문제
 
@@ -56,6 +58,44 @@
 - 과거경험 설명
 - 습관
 - 롤플레이
+
+### 오픽 문제 유형별 특징
+
+#### 설명 질문
+
+유형 1. 장소, 종류 묘사
+
+> 해외여행을 제외하곤 대부분 과거 시제를 사용 X
+
+유형 2. 활동, 루틴, 단계 묘사
+
+#### 과거형 질문
+
+유형 3. 최초/ 최근 경험 설명(과거)
+
+유형 4. 인상적인 경험 설명(과거)
+
+> 4번의 경우 좀 더 배점이 높음
+
+#### 롤플레잉 질문
+
+유형 5. 단순 질문하기
+
+유형 6. 정보 요청하기
+
+유형 7. 문제 해결하기
+
+> 7번의 경우 배점이 높음
+
+유형 8. 유사한 문제 상황 설명
+
+> 13번에 출제되는 롤플레이잉 문제 7번 문제랑 비슷한 과거 경험 설명 <br> 그 문제를 어떻게 해결했는지 설명
+
+#### 최고 난도 문제
+
+유형 9. 비교, 대조
+
+유형 10. 사회적 이슈나 관심사
 
 ### 1. habit 전략
 
