--- a/study/오픽/2. 집 묘사.md
+++ b/study/오픽/2. 집 묘사.md
@@ -15,10 +15,26 @@
 
 ## 1. 집의 모습 묘사
 
+- 가족
+
+  Describe what your home looks like?
+
+  Explain the floor plan and the number of rooms
+
+  your homes has.
+
+  Please discuss what your home is like for me
+
 I live in
 
 ## 2. 방에 있는 가구나 가전제품 묘사
 
 ## 3. 집에서 가족들과 함께하는 일
+
+- 가족
+
+  While at home, what is your typical routine?
+
+  During the week and on the weekends, what types of things do you do?
 
 ## 4. 최군에 집에 준 변화
