--- a/study/오픽/0. 설문.md
+++ b/study/오픽/0. 설문.md
@@ -6,18 +6,36 @@ https://www.youtube.com/watch?v=GqznyqWi8Mg
 
 5-5 난이도 추천
 
+[IL ~ IM2 는 3, 4 단계 하래](https://www.youtube.com/watch?v=D5SThGnChpM)
+
 근데 IM 은 좀 낮춰도 되지 않을까? 라는 생각 중~
+
+### 1-1 난이도에 따른 문제 출제 유형
+
+3 ~ 4 단계를 하면 9번과 10번 유형은 절대 출제 안됨
 
 ## 2. 설문
 
-1. 일경험 없음
-2. 학생 아님
-3. 수강 후 5년 이상 지남
-4. 아파트 /가족가 같이 삼
-5. 영화/ 공원/ 공연/ 리얼리티 쇼 or tv/ 쇼핑/ 카페/ 해변가기
-6. 음악 감상/ 요리하기
-7. 조깅/ 걷기/ 운동을 전혀 하지 않음
-8. 집에서 보내는 휴가/ 국내여행
+- 일경험 없음
+- 학생 아님 > 수강 후 5년 이상 지남
+- 아파트 /가족가 같이 삼
+
+- 선택 주제 (12개를 반드시 골라야함)
+
+  1.  영화
+  1.  공연
+  1.  공원가기
+  1.  해변가기
+  1.  카페
+
+  1.  음악 감상
+  1.  요리하기
+
+  1.  조깅
+  1.  걷기
+  1.  운동을 전혀 하지 않음
+  1.  집에서 보내는 휴가
+  1.  국내여행
 
 ### 2. 1이렇게 설문 자주 나오는 문제
 
@@ -53,6 +71,18 @@ https://www.youtube.com/watch?v=GqznyqWi8Mg
    > 바로 본론 우선 박으라고
 
 ## 질문 레파토리
+
+1. 현재 귀하는 어디에 살고 있나.
+
+1. 귀하는 여가활동으로 주로 무엇을 하는가.
+
+1. 귀하는 취미나 관심사가 무엇인가.
+
+1. 귀하는 주로 어떤 운동을 즐기는가.
+
+1. 휴가나 출장을 다녀온 경험이 있는가.
+
+1. 돌발주제 2개
 
 - 설명
 - 과거경험 설명
@@ -91,7 +121,7 @@ https://www.youtube.com/watch?v=GqznyqWi8Mg
 
 > 13번에 출제되는 롤플레이잉 문제 7번 문제랑 비슷한 과거 경험 설명 <br> 그 문제를 어떻게 해결했는지 설명
 
-#### 최고 난도 문제
+#### 최고 난도 문제 (근데 안할꺼임)
 
 유형 9. 비교, 대조
 
