--- a/study/면접 지식/Network/1. OSI 7계층,TCP.md
+++ b/study/면접 지식/Network/1. OSI 7계층,TCP.md
@@ -70,3 +70,7 @@
 ## 레퍼런스
 
 - [[개발자 인터뷰] TCP/IP 4계층](https://velog.io/@jehjong/%EA%B0%9C%EB%B0%9C%EC%9E%90-%EC%9D%B8%ED%84%B0%EB%B7%B0-TCPIP-4%EA%B3%84%EC%B8%B5)
+
+## 추가 공부
+
+- [[개발자 장고]기술면접 질문 리스트 - 네트워크](https://docs.google.com/document/d/19swpBGSf1Z-VKam_7e1JzGbckU2EVVfj_-1PpUjdxJ8/edit)
