--- a/study/면접 지식/Network/2. IP.md
+++ b/study/면접 지식/Network/2. IP.md
@@ -22,6 +22,33 @@
 
     도메인 주소를 IP 주소로 변환해주는 시스템
 
+1. 사용자가 브라우저에 URL(www.naver.com)을 입력
+
+   브라우저가 URL에 적힌 값을 파싱 해서 HTTP Request Message를 만들고 전송 합니다.
+
+2. 이때, Domain으로 요청을 보낼 수 없기 때문에 DNS Lockup을 수행합니다.
+
+   DNS Lockup 과정은 크롬의 경우 브라우저 → hosts 파일 → DNS Cache의 순서로 도메인에 매칭 되는 ip를 찾습니다.
+   일반적으로 설명하는 DNS Lockup은 루트 도메인 서버에서부터 서브 도메인 서버 순으로 찾게 됩니다.
+
+3. 이 요청은 프로토콜 스택이라는 OS에 내장된 네트워크 제어용 소프트웨어에 의해 패킷에 담기고
+
+   패킷에 제어정보를 덧붙여 LAN 어댑터에 전송하고, LAN 어댑터는 이를 전기신호로 변환시켜 송출합니다.
+
+4. 패킷은 스위칭 허브 등을 경유하여 인터넷 접속용 라우터에서 ISP로 전달되고 인터넷으로 이동합니다.
+
+   (ISP: Internet Service Provider : 인터넷 서비스 제공자)
+
+5. 액세스 회선에 의해 통신사용 라우터로 운반되고 인터넷의 핵심부로 전달되고, 고속 라우터들 사이로 목적지까지 패킷이 흘러들어 가게 됩니다.
+
+6. 핵심부를 통과한 패킷은 목적지의 LAN에 도착하고, 방화벽이 패킷을 검사한 후 캐시 서버로 보내 웹 서버에 갈 필요가 있는지 검사합니다.
+
+7. 웹 서버에 도착한 패킷은 프로토콜 스택이 패킷을 추출하여 메시지를 복원하고 웹 애플리케이션에 넘깁니다. (TCP 3 way handshake)
+
+8. 도착한 HTTP 응답 메세지는 웹 페이지 데이터로 변환되어 웹 브라우저에 의해 출력 됩니다.
+
+9. 요청에 대한 HTTP 응답 데이터를 작성하여 클라이언트로 회송하고, 이는 전달된 방식 그대로 전송됩니다.
+
 ## 로드 밸런서
 
     서버의 부하를 분산시켜주는 시스템
