--- a/study/면접 지식/java/3. 가비지 컬렉션.md
+++ b/study/면접 지식/java/3. 가비지 컬렉션.md
@@ -1,5 +1,37 @@
-# 가비지 컬렌션
+# 가비지 컬렉션
+
+C 를 사용하던 시절은 메모리 할당을 해주고 나서
+
+개발자가 직접 메모리를 지워줘야 했음 (`free()` 함수)
+
+java는 이를 가비지 컬렉션이 관할을 함
+
+    메모리를 재활용하기 위해서 더 이상 참조되지 않는 객체들을 자동으로 제거해주는 모듈
+
+장점 : 개발자가 안해도 됨
+
+단점 : 삭제를 하기위해 중간중간 멈춰서(Mark and Sweep) 속도가 좀 떨어짐
+
+---
+
+JVM의 `Heap` 영역은 설계될 때
+
+2가지의 전제를 두고 설계됐음
+
+- 대부분의 객체는 금방 접근 불가능 상태가 된다.
+
+- 오래된 객체에서 새로운 객체로의 참조는 아주 적게 된다.
+
+즉 객체는 대부분 `일회성`이고 메모리에 `오랫동안 남아있질 않는다`는 소리
+
+그렇기에 생존 기간에 따라 물리적인 heap 영역을 나눠,
+
+young, old 영역을 두었다. (초기에는 perm 영역도 있었는 java8에서 삭제)
+
+## Minor GC, Major GC
 
 ## 레퍼런스
 
 [[개발자 면접 질문] 자바 - 가비지 컬렉션](https://www.youtube.com/watch?v=9so187f-YRM)
+
+[[Java] Garbage Collection(가비지 컬렉션)의 개념 및 동작 원리 (1/2)](https://mangkyu.tistory.com/118)
