--- a/study/면접 지식/java/0. 자바.md
+++ b/study/면접 지식/java/0. 자바.md
@@ -16,7 +16,7 @@ JAVA 는 썬 마이크로시스템즈의 제임스 고슬링의 주도로 만들
 
    실제로 자바는 Object 클래스에서 모든 클래스를 파생한다.
 
-1. Interpreted(통역) 언어
+1. Interpreted(통역) 언어 > 이건 솔직히 알고만 있자
 
    자바는 정확하게 말하면 컴파일 언어인 동시에 인터프리터 언어
 
@@ -42,13 +42,19 @@ JAVA 는 썬 마이크로시스템즈의 제임스 고슬링의 주도로 만들
 
    시스템 붕괴 우려가 없음
 
+1. 네트워크, 분산처리의 지원
+
+   다양한 java API 라이브러리들은 네트워크 및 분산처리와 관련된 기능을 쉽게 개발할 수 있도록 지원.
+
+   대규모 분산처리 환경등의 프로그래밍에 적합하다.
+
 1. 멀티쓰레드를 지원함
 
    하나의 프로그램 단위가 동일한 쓰레드를 동시에 수행할 수 있다.
 
    특히 자바는 멀티 프로세서 하드웨어를 지원하도록 설계되었으므로 멀티 CPU 시스템에서 높은 효율
 
-1. 동적임
+1. 동적임 (동적 로딩)
 
    자바 인터페이스를 이용하면 하나의 모듈을 갱신할 때 다른 모듈을 모두 갱신할 필요가 없다.
 
@@ -102,6 +108,8 @@ JAVA 는 썬 마이크로시스템즈의 제임스 고슬링의 주도로 만들
 
 ## 레퍼런스
 
-[점프 투 자바](https://wikidocs.net/199)
+- [점프 투 자바](https://wikidocs.net/199)
 
-[[개발자 면접 질문] 자바 - 버전 특징](https://www.youtube.com/watch?v=_6YP2FNTt80)
+- [[Java] 자바의 특징](https://hungseong.tistory.com/57)
+
+- [[개발자 면접 질문] 자바 - 버전 특징](https://www.youtube.com/watch?v=_6YP2FNTt80)
