--- a/study/면접 지식/java/2. 자바 메모리 영역.md
+++ b/study/면접 지식/java/2. 자바 메모리 영역.md
@@ -1,5 +1,7 @@
 # 자바 메모리 영역(Runtime Data Area)
 
+![그림](/study/pic/JVM-memory-structure1.png)
+
 즉 자바 `Runtime Data Area` 에 대해 알아보자
 
 크게 5가지로 구성되어 있음
@@ -104,3 +106,5 @@ Garbage Collection 생명주기에 의해 지속적으로 메모리가 저장됨
 - [자바 메모리 구조 뿌시기 [ JVM이란? ]](https://www.youtube.com/watch?v=AWXPnMDZ9I0&t=199s)
 
 - [자바(Java) 메모리 구조 소개 [ 자바(Java) ]](https://www.youtube.com/watch?v=zta7kVTVkuk&t=29s)
+
+- [JVM의 메모리 구조 및 할당과정](https://inspirit941.tistory.com/294)
