--- a/study/면접 지식/java/4. 레퍼클래스.md
+++ b/study/면접 지식/java/4. 레퍼클래스.md
@@ -52,7 +52,7 @@ Human b = new Human();
 
   그렇기에 참조형을 비교할땐 `equals()` 함수를 이용하자
 
-- Immutable(불변)
+- Immutable(불변) 오브젝트
 
   기존의 객체을 새 값으로 변경하면 기존의 참조에서 값이 바뀌는게 아니라
 
@@ -91,3 +91,7 @@ String b = new String("abcd");
 ```
 
 이렇게 new 연산자로 생성을 하게 되면 String Pool `외부 Heap` 영역에 새로 생성되기에 참조주소가 다름
+
+## 레퍼런스
+
+- [[개발자 면접 질문] 자바 - 래퍼 클래스](https://www.youtube.com/watch?v=eqltmFST-N8&list=PLi-xJrVzQaxVxg-B4U4nOylNEqf7T1Mm5&index=5)
