--- a/study/면접 지식/java/6. 컬렉션.md
+++ b/study/면접 지식/java/6. 컬렉션.md
@@ -1,1 +1,61 @@
 # 컬렌션 프레임워크
+
+![컬렉션](/study/pic/collection2.png)
+
+    자바에서 크기가 고정되어 있지 않고 여러객체를 담을 수 있는 라이브러리
+
+여기서 `Map` 은 컬렉션에 들어가진 않음
+
+`key` 와 `vlaue` 로 이루어져 있어 컬렉션 구조와는 다르기 때문
+
+## Iterable Interface
+
+Iterable 는 iterator 메소드만 구현 해주면 됨
+
+- 다음 원소가 있는가?
+
+- 다음 원소 내놔
+
+- 삭제해줘
+
+## List
+
+순서가 있는 데이터의 집합으로 데이터의 중복을 허용
+
+1. ArrayList
+
+   단방향 포인터 구조로 각 데이터에 대한 인덱스를 가지고 있어 조회 기능에 성능이 뛰어남
+
+2. LinkedList
+
+   양방향 포인터 구조로 데이터의 삽입, 삭제가 빈번할 경우 데이터의 위치정보만 수정하면 되기에 유용
+
+   스택, 큐, 양방향 큐 등을 만들기 위한 용도로 쓰임
+
+3. Vector
+
+   내부에서 자동으로 동기화처리가 일어나 비교적 성능 느림
+
+## Set
+
+중복해서 저장 X
+
+1. HashSet
+
+   가장빠른 임의 접근 속도
+
+   순서를 예측할 수 없음
+
+2. TreeSet
+
+   정렬방법을 지정할 수 있음
+
+3. LinkedSet
+
+## Map
+
+## 레퍼런스
+
+- [[개발자 면접 질문] 자바 - 컬렉션 프레임워크](https://www.youtube.com/watch?v=iJn1NLVw6FQ&list=PLi-xJrVzQaxVxg-B4U4nOylNEqf7T1Mm5&index=2)
+
+- [[JAVA] Java 컬렉션(Collection) 정리](https://gangnam-americano.tistory.com/41)
