--- a/study/면접 지식/Network/1. OSI 7계층,TCP.md
+++ b/study/면접 지식/Network/1. OSI 7계층,TCP.md
@@ -12,6 +12,26 @@
 
 7단계 중 특정한 곳에 이상이 생기면 다른 단계의 장비 및 소프트웨어를 건들이지 않고도 이상이 생긴 단계만 고칠 수 있기 때문
 
+## 라우터와 스위치의 차이
+
+- 스위치
+
+  목적지로 출발한 데이터를 중간에 적합한 경로로 스위칭해주는 역할을 하는것
+
+  데이터링크 계층에 속함
+
+  MAC주소 기반으로 동작
+
+- 라우터
+
+  목적지로 가는 적합한 경로를 찾아주는 라우팅 기능
+
+  우터는 IP주소를 기반으로 작동하여 네트워크 계층에 속함
+
+스위치는 단일 LAN을 함께 연결하고
+
+라우터는 여러 LAN 및 여러 물리적 위치를 연결하며 인터넷 연결도 제공
+
 ## TCP/IP 4계층
 
 실제 사용되는 TCP/IP는 OSI 참조 모델을 기반으로 상업적이고 실무적으로 이용될 수 있도록 단순화된 모형
