--- a/study/면접 지식/Network/2. IP, DNS.md
+++ b/study/면접 지식/Network/2. IP, DNS.md
@@ -6,6 +6,8 @@
 
     인터넷 망을 통해 패킷을 전달하는 프로토콜
 
+    네트워크의 어떤 PC에서 다른 PC로 데이터를 전송하는 역할
+
 ### IP 특징
 
 - 비신뢰성
@@ -17,6 +19,22 @@
 - 비연결성
 
   패킷을 보내는 길을 정하지 않음
+
+## 종류
+
+- ICMP(인터넷 제어 메시지 프로토콜)
+
+  네트워크 장치에서 네트워크 통신 문제를 진단하는 데 사용하는 네트워크 계층 프로토콜
+
+- IGMP (인터넷 그룹 관리 프로토콜)
+
+  여러 장치가 하나의 IP 주소를 공유하여 모두 동일한 데이터를 수신할 수 있도록 하는 네트워크 계층 프로토콜
+
+- ARP (Address Resolution Protocol 주소 결정 프로토콜)
+
+  네트워크 상에서 IP 주소를 물리적 네트워크 주소로 대응(bind)시키기 위해 사용되는 프로토콜
+
+- RARP (Reverse ARP )
 
 ## DNS
 
@@ -54,3 +72,13 @@
     서버의 부하를 분산시켜주는 시스템
 
 https://sudo-minz.tistory.com/193
+
+## 레퍼런스
+
+- [기술면접을 위한 Network 개념정리 04 - IP](https://8iggy.tistory.com/220)
+
+- [인터넷 제어 메시지 프로토콜(ICMP)이란?](https://www.cloudflare.com/ko-kr/learning/ddos/glossary/internet-control-message-protocol-icmp/)
+
+- [IGMP 스누핑이란?](https://www.cloudflare.com/ko-kr/learning/network-layer/what-is-igmp-snooping/)
+
+- [ARP와 RARP protocol 차이점](https://velog.io/@hayeon/ARP%EC%99%80-RARP-protocol-%EC%B0%A8%EC%9D%B4%EC%A0%90)
