--- a/study/면접 지식/java/0. 자바.md
+++ b/study/면접 지식/java/0. 자바.md
@@ -106,6 +106,30 @@ JAVA 는 썬 마이크로시스템즈의 제임스 고슬링의 주도로 만들
 
    이번에 자바가 공식적으로 지원 해준거
 
+## 기술면접 질문/ 답변
+
+### Java 의 특징을 설명해주세요
+
+- java는 객체지향 프로그래밍 언어입니다.
+
+- 기본자료형을 제외한 모든 요소들이 객체로 표현되고, 객체 지향 개념의 특징인 캡슐화, 상속, 다형성이 적용된 언어입니다.
+
+- 장점
+
+  - JVM 위에서 작동하기 때문에 운영체제가 독립적입니다.
+  - GarbageCollector를 통해서 자동으로 메모리 관리를 해줍니다.
+  - 멀티 쓰레드를 지원합니다.
+
+- 단점
+
+  - 다중 상속이나 타입에 엄격하며, 제약이 많습니다. ???
+
+- 정리
+
+  Java는 기본자료형을 제외한 모든 요소들이 객체로 표현되고, 객체 지향개념의 특징인 다형성,상속,캡슐화가 잘 적용된 객체 지향 프로그래밍 언어입니다.
+  특징으로는 JVM(자바가상머신)위에서 동작하기 때문에 운영체제에 독립적이지면, 실행 속도가 상대적으로 느립니다.
+  또한 GC를 통한 자동적인 메모리 관리가 가능하지만, 다중 상속이나 타입에 엄격하며 제약이 많습니다.
+
 ## 레퍼런스
 
 - [점프 투 자바](https://wikidocs.net/199)
