--- a/study/면접 지식/java/1. 자바 동작원리.md
+++ b/study/면접 지식/java/1. 자바 동작원리.md
@@ -146,8 +146,32 @@
 
 이렇게 ClassLoader 를 통해 바이트 코드를 메모리 영역인 Runtime Data Area 로 로드 시킴
 
+## 기술면접 질문/ 답변
+
+### JVM의 역활에 대해 설명해주세요
+
+- JVM은 스택 기반으로 동작하며, java byte code를 os에 맞게 해석해주는 역활을 하고 GarbageCollection 을 통해 자동으로 메모리 관리를 해줍니다.
+
+- Java 는 OS에 종속적이지 않다는 특징을 가지고 있다. OS에 종속받지 않고 실행되기 위해선 OS 위에서 Java 를 실행시킬 무언가가 필요하다. 그게 바로 JVM이다.
+
+- 즉, OS에 종속받지 않고 CPU 가 Java를 인식, 실행할 수 있게 하는 가상 컴퓨터이다.
+
+### Java에서 제공하는 원시 타입들에 무엇이 있고, 각각 몇 바이트를 차지 하나요?
+
+- 정수형 : byte-1,short-2,int-4, long-8
+
+- 실수형 : fload-4,double-8
+
+- 문자형 : char-2
+
+- 논리형 : boolean-1
+
+저는 외울때 bsil1248(브실1248)로 외웠습니다.ㅎㅎ
+
 ## 레퍼런스
 
 - [JVM 동작원리 및 기본개념](https://steady-snail.tistory.com/67)
 
 - [[Java] JVM의 클래스 로더란?](https://steady-coding.tistory.com/593)
+
+- [[자바] 신입 개발자 기술면접 질문 정리 -(1)](https://velog.io/@jyyoun1022/자바-신입-개발자-기술면접-질문-정리-1)
