--- a/study/면접 지식/java/2. 자바 메모리 영역.md
+++ b/study/면접 지식/java/2. 자바 메모리 영역.md
@@ -101,6 +101,48 @@ Garbage Collection 생명주기에 의해 지속적으로 메모리가 저장됨
 
 각 스레드 별로 생성됨
 
+## 기술면접 질문/ 답변
+
+### 자바의 메모리 영역에 대해 설명해주세요
+
+- 자바의 메모리 공간은 크게 method, stack, heap 영역으로 구분되고, 데이터 타입에 따라 할당됩니다.
+
+- 메소드 영역: 전역변수와 static 변수를 저장하며, method 영역은 프로그램의 시작부터 종료까지 메모리에 남아있습니다.
+
+- 스택 영역: 지역 변수와 매개변수 데이터 값이 저장되는 공간이며, 메소드가 호출될때 메모리가 할당되고 종료되면 메모리가 해제됩니다.
+
+- 힙 영역: new 키워드로 생성되는 객체(인스턴스), 배열 등이 Heap 영억에 저장되며, 가비지 컬렉션에 의해 관리됩니다.
+
+### 각 메모리 영역이 할당되는 시점이 언제인가요?
+
+- Method 영역: JVM 이 동작해서 클래스가 로딩될떄 생성
+
+- Stack 영역: 런타임시 할당
+
+- Heap 영역: 컴파일 타임시 할당
+
+※ 컴파일 타임 : 소스코드가 기계어로 변환되어 실행가능한 프로그램이 되는 과정
+
+※ 런타임 : 컴파일 타임 이후 프로그램이 실행되는 때
+
+### new String() 과 리터럴("") 의 차이점에 대해 설명해주세요
+
+- new String 은 new 키워드로 새로운 객체를 생성하기 때문에 Heap 메모리 영역에 저장되고,
+
+"" 는 Heap 안에 있는 String Constant Pool 영역에 저장됩니다.
+
+## 접근 제한자(Access Modifier)에 대해 설명해주세요
+
+- 변수 또는 메소드의 접근 범위를 설정하기 위해서 사용하는 Java의 예약어를 의미하며, 총 4가지 종류가 있습니다.
+
+- public: 접근제한이 없습니다. (같은 프로젝트 내 어디서든 사용이 가능)
+
+- protected: 해당 패키지 내 접근 가능, 다른 패키지에서는 상속받아 자손 클래스에서 접근 가능합니다.
+
+- default: 해당 패키지 내에서만 접근 가능
+
+- private: 해당 클래스에서만 접근 가능
+
 ## 레퍼런스
 
 - [자바 메모리 구조 뿌시기 [ JVM이란? ]](https://www.youtube.com/watch?v=AWXPnMDZ9I0&t=199s)
@@ -108,3 +150,5 @@ Garbage Collection 생명주기에 의해 지속적으로 메모리가 저장됨
 - [자바(Java) 메모리 구조 소개 [ 자바(Java) ]](https://www.youtube.com/watch?v=zta7kVTVkuk&t=29s)
 
 - [JVM의 메모리 구조 및 할당과정](https://inspirit941.tistory.com/294)
+
+- [[자바] 신입 개발자 기술면접 질문 정리 -(2)](https://velog.io/@jyyoun1022/자바-신입-개발자-기술면접-질문-정리-2)
