--- a/study/면접 지식/java/1. 자바 동작원리.md
+++ b/study/면접 지식/java/1. 자바 동작원리.md
@@ -32,11 +32,19 @@
 
 가상머신이란?
 
-    하드웨어를 소프트웨어적으로 구현해서 거기서 운영체제가 작동하도록 하는 기술
+    프로그램의 실행하기 위해 물리적인 머신과 유사한 머신을 소프트웨어로 구현한 것.
 
 그럼 자바가상 머신은 뭐냐
 
     Java로 개발한 프로그램을 컴파일하여 만들어지는 바이트코드를 실행시키기 위한 가상머신.
+
+- JVM의 목적은 클래스 로더를 통해 자바API와 함께 자바 애플리케이션을 실행하는 것.
+
+- JVM은 OS와 JAVA사이에 중개자 역할을 한다. 중간에서 자바 바이트코드를 읽는다.
+
+- JVM은 따라서 OS에 구애받지 않고 자바 애플케이션을 실행할 수 있고, 그 외에 GC, 메모리 관리의 역할도 한다.
+
+- JVM은 스택 기반의 가상머신이다. ARM 아키텍쳐 같은 하드웨어는 레지스터 기반으로 동작하는데 JVM은 스택으로 동작한다고 한다. 왜 그럴까?
 
 - JVM 의 구성은
 
@@ -175,3 +183,5 @@
 - [[Java] JVM의 클래스 로더란?](https://steady-coding.tistory.com/593)
 
 - [[자바] 신입 개발자 기술면접 질문 정리 -(1)](https://velog.io/@jyyoun1022/자바-신입-개발자-기술면접-질문-정리-1)
+
+- [#자바가상머신, JVM(Java Virtual Machine)이란 무엇인가?](https://asfirstalways.tistory.com/158)
