--- a/study/면접 지식/java/1. 자바 동작원리.md
+++ b/study/면접 지식/java/1. 자바 동작원리.md
@@ -12,21 +12,19 @@
 
 1. 어플리케이션이 실행되면 JVM 이 OS로부터 메모리를 할당 받음
 
-   JVM 은 할당 받은 메모리를 용도에 따라 구분 관리
+   JVM 은 할당 받은 메모리를 용도에 따라 영역을 나누어 관리
 
 1. 자바 컴파일러가 소스 파일을 `자바 바이트코드 (java Byte Code)` 로 바꿈
 
 1. 컴파일된 바이트코드를 `JVM` 의 `클래스로더(Class Loader)` 로 전달되고
 
-1. 클래스로더는 필료한 클래스들을 로딩 및 링크하여 `런타임 데이터 영역(Runtime Data area)`
+1. 클래스로더는 필료한 클래스들을 로딩 및 링크하여 `런타임 데이터 영역(Runtime Data area)` JVM으로 로딩흠
 
-   JVM 메모리에 올림
+1. 그리고 `실행엔진(Execution Engine)`을 통해 해석됨
 
-1. 그리고 `실행엔진(Execution Engine)`이 JVM 에 있는 바이크 코드들을 하나씩 가져와 실행하면서
+1. 해석된 바이트코드는 Runtime Data Areas 에 배치되어 실질적인 수행이 이루어짐
 
-   그때 그때 필요한 클래스들을 클래스로더에게 요청함
-
-   > 클래스로더가 다 메모리에 올리는게 아님 메모리 낭비를 줄이기 위해
+> 이러한 실행 과정에서 JVM 은 필요에 따라 `Thread Synchronization` 과 `GC` 같은 관리 작업을 수행함
 
 ## JVM (Java Virtual Machine)
 
@@ -58,7 +56,9 @@
 
 클래스 로더란?
 
-     Java 클래스를 로드하는 역할을 한다. 클래스 로더에는 로딩, 링크, 초기화 단계로 나뉘어져 있음
+     Java 클래스(.class 파일)를 로드하고, 링크를 통해 배치하는 작업을 수행하는 모듈.
+
+     클래스 로더에는 로딩, 링크, 초기화 단계로 나뉘어져 있음
 
 클래스를 로드 할때는 parent-first/child-last의 순서로 로드
 
