--- a/study/면접 지식/java/2. 자바 메모리 영역.md
+++ b/study/면접 지식/java/2. 자바 메모리 영역.md
@@ -152,3 +152,5 @@ Garbage Collection 생명주기에 의해 지속적으로 메모리가 저장됨
 - [JVM의 메모리 구조 및 할당과정](https://inspirit941.tistory.com/294)
 
 - [[자바] 신입 개발자 기술면접 질문 정리 -(2)](https://velog.io/@jyyoun1022/자바-신입-개발자-기술면접-질문-정리-2)
+
+- [면접준비 - Java JVM(1)](https://kkminseok.github.io/posts/TIL0928/)
