--- a/study/git/md/1. version.md
+++ b/study/git/md/1. version.md
@@ -60,7 +60,13 @@ mkdir hello-git-cli
 git init .
 ```
 
-## 버전 관리
+init 은 새로운 Git 저장소(repository)를 생성할 때 사용하는 Git 명령어
+
+이걸 하면 해당 디렉터리에 깃 저장소가 등록되는거임
+
+가서 보면 막 이런 저런 git 관련 파일들이 생겨 있는 걸 볼 수 있음
+
+## 1. version (버전관리)
 
 - git init : Initialize repository
 
@@ -121,7 +127,7 @@ index 01e79c3..b6bebeb 100644
 
 - git reset --hard
 
-## 이전 버전으로 돌아가기 (checkout)
+### 이전 버전으로 돌아가기 (checkout)
 
 여러 버전이 커밋되어 있는데
 
@@ -170,7 +176,7 @@ git checkout master
 
 를 하면 됨
 
-## 삭제
+### 삭제
 
 이번에는 버전 삭제
 
@@ -188,7 +194,7 @@ git checkout master
 
 --hard 는 버전을 삭제할 뿐만 아니라 수정하고 있었던거까지 지워버려
 
-## 되돌리기 (revert)
+### 되돌리기 (revert)
 
 reset 의 문제점이 그냥 막 지어버린다는 점임
 
