--- a/study/git/md/2. branch.md
+++ b/study/git/md/2. branch.md
@@ -140,6 +140,42 @@ this apple
 
 수정을 해주고 add, commit 해주면 됨
 
+### 3 way merge
+
+![3wayMerge](../pic/3wayMerge.png)
+
+자 기존 base에서 시작해서 구현된 2가지의 버전이 있다고 해보자
+
+`here` 버전과 `there` 버전이 있음
+
+이걸 병합한다고 했을때 위의 그림의 2 way merage 처럼 됨
+
+A 부분을 제외한 나머지 모든 부분이 충돌이 일어나게 됨
+
+이걸 해결하기 위해 3 way merge 가 나타남
+
+기존이 된 `base` 버전 까지 같이 비교해서 하는거임
+
+그러면 base 기준에서 그대로인것과 바뀐것을 보고 바뀐것으로 바꾸는 것임
+
+두 버전 다 base 기준과 바뀐것이면 그제서야 충돌이 일어나게 됨
+
+### 외부도구
+
+다 좋다 이거야 근데 지금 쓰는건 도스 창이자나?
+
+그리고 이를 관리하는 파일들은 코드들이고?
+
+충돌이 일어나 코드들을 조정할때마다 개빡치다 이거야
+
+이를 편하게 해주는게 외부도구임
+
+`p4merge` 가 있는데 먼가 귀찮고 뭐 더 깔기 싫어서
+
+그냥 우선 보기만 함
+
+나중에 필요할때 여기 다시 와서 보고 설치하고 이용하면 될듯
+
 ## 출처
 
 - [GIT3 - CLI Branch & 충돌](https://opentutorials.org/module/3927)
