--- a/study/보수의 개념.md
+++ b/study/보수의 개념.md
@@ -80,8 +80,55 @@ N 보수법, N-1 보수법
 
 그 방법을 이제부터 2진법의 보수인 1의보수, 2의보수를 통해 알아보자
 
-## 1의 보수, 2의 보수
+## 1의 보수법, 2의 보수법
+
+십진수 10을 2진수 바꾼다면 1010
+
+- 10 은 1010 XOR 1111 을 한것 >> 0101 이게 보수임
+
+XOR 연산은 입력값이 같지 않으면 1을 출력
+
+- 1의 보수법
+  13 - 10 = 3 이걸 해보자
+
+  13의 이진수는 1101
+
+  1101 - 1010 >> 1101 + 0101 = 10010 가 되고
+
+  n-1 보수법은 최상위 자리(`캐리비트`)를 빼서 첫째자리에 더하는거니까 0011 >> 3 이 됨
+
+  그럼 10 - 13 = -3 은 어떻게 될까
+
+  1010 - 1101 >> 1010 + 0010 = 1100 이 됨 여기서 캐리가 안나옴 이때는 다시 한번 보수를 해주고 마이너스 부호를 붙혀줌
+
+  1010 - 1101 >> 1010 + 0010 = 1100 >> (-)0011 >> -3
+
+- 2의 보수법
+
+  2의 보수는 이진법한 수를 XOR 해준 값에 + 1 값을 해주는거임 숫자 -10 을 2의 보수법으로 바꾸면
+
+  1010 >> 0101 + 1 >> 0110 이게 2의 보수
+
+  13 - 10 = 3 을 해보자
+
+  1101 + 0110 >> 10011 여기서 캐리비트를 버리면 0011 >> 3 이 됨
+
+  이번에는 10 - 13 = -3 을 해보자
+
+  1010 - 1101 >> 1010 + (0010 + 1) >> 1010 + 0011 = 1101
+
+  1101 로 캐리비트가 발생하지 않았음 그럼 다시 보수를 해줌
+
+  참고로 지금 하고 있는거 2의 보수법임 계속 보수해준 값에 +1 해줘야함
+
+  1101 >> 0010 + 1 = (-)0011 >> -3
 
 ## 출처
 
-[컴퓨터는 보수를 이용해서 뺄셈을 하지요 ( 10의 보수, 2의 보수, 9의 보수, 1의 보수 )](https://www.youtube.com/watch?v=ouSqaaumhvE)
+- [컴퓨터는 보수를 이용해서 뺄셈을 하지요 ( 10의 보수, 2의 보수, 9의 보수, 1의 보수 )](https://www.youtube.com/watch?v=ouSqaaumhvE)
+
+- [1의 보수 완전 정복 one's complement](https://www.youtube.com/watch?v=MlxJPWBdV0Q)
+
+- [2의 보수 완전정복 two's complement](https://www.youtube.com/watch?v=h2ktWG7vcJ4&t=8s)
+
+- [2의 보수 장점 - WHY TWO'S COMPLEMENT?](https://www.youtube.com/watch?v=FFAZFIsqBrA)
