--- a/study/보수의 개념.md
+++ b/study/보수의 개념.md
@@ -123,6 +123,19 @@ XOR 연산은 입력값이 같지 않으면 1을 출력
 
   1101 >> 0010 + 1 = (-)0011 >> -3
 
+## 2의 보수법을 사용하는 이유
+
+현재 2의 보수법을 사용하고 있는데
+
+2의 보수를 사용하는 이유 :
+
+1. 부호비트방식과 1의 보수표현법은 +0과 -0의 표현이 다르다.
+   그러나 2의 보수표현법은 +0과 -0의 표현이 같다.
+
+2. +0과 -0을 하나로 표현할 수 있어 저장의 효율이 향상된다.
+
+라는 이유 때문에 그럼
+
 ## 출처
 
 - [컴퓨터는 보수를 이용해서 뺄셈을 하지요 ( 10의 보수, 2의 보수, 9의 보수, 1의 보수 )](https://www.youtube.com/watch?v=ouSqaaumhvE)
