--- a/study/오픽/0. 설문.md
+++ b/study/오픽/0. 설문.md
@@ -138,10 +138,47 @@ https://www.youtube.com/watch?v=GqznyqWi8Mg
 
 ## Extra. 좋은 표현
 
-it makes me feel + 동사 :: 그것 때문에 ~ 하게 돼
+- it makes me feel + 동사 :: 그것 때문에 ~ 하게 돼
 
-I felt like ~, I think ~~ >> 그때 나의 판단, 감정등을 말하는거라 쓰면 좋데
+  I don’t know why but, it makes me feel like crying.
+  왠지는 모르겠지만 갑자기 울고 싶네.
 
-stand out >> 눈에 뛰다
+  ​It makes me feel like a great white polar bear!
+  이 코트는 나에게 거대한 하얀 북극곰 같은 느낌이 들게 해주어!
 
-all about ~ >> ~ 가 가장 중요하다
+  It makes me feel like I'm really good atmaths.
+  그것은 내가 정말로 수학을 잘하는 것처럼 느끼게 한다.
+
+- it makes me feel + 형용사 >> 그게 내 기분을 ~ 하게 해
+
+  It makes me feel confident.
+  그 말에 자신감이 생겨
+
+  It makes me feel better than before.
+  그게 내 기분을 전보다 더 좋게 해
+
+  ​It makes me feel alive.
+  그게 내가 살아있다고 느끼게 해주네.
+
+- I felt like ~, I think ~~ >> 그때 나의 판단, 감정등을 말하는거라 쓰면 좋데
+
+  I feel like I need to exercise.
+  운동을 해야 할 것 같은 기분이 들어.
+
+  I feel like I should start on the homework right now.
+  지금 당장 숙제를 시작해야 할 것 같아.
+
+  I feel like eating a big steak for dinner.
+  저녁으로 큰 스테이크를 먹고 싶어.
+
+- stand out >> 눈에 뛰다
+
+- all about ~ >> ~ 가 가장 중요하다
+
+- sense of time >> 시간관념, 시간감각
+
+  We focused on just online game for a while, so we lost all `sense of time`.
+
+  우리는 한동안 온라인 게임에만 집중해서 시간이 가는줄 몰랐다.
+
+- that's pretty much it >> 그게 다야, 그뿐이야
