--- a/study/오픽/2. 집 묘사.md
+++ b/study/오픽/2. 집 묘사.md
@@ -25,7 +25,7 @@
 
   Please discuss what your home is like for me
 
-I live in
+지금 제가 살고 있는 집은 아파트로 큰 중앙 복도가 있고 강에서 금이 흐르는 아파트입니다
 
 ## 2. 방에 있는 가구나 가전제품 묘사
 
@@ -37,4 +37,4 @@ I live in
 
   During the week and on the weekends, what types of things do you do?
 
-## 4. 최군에 집에 준 변화
+## 4. 최근에 집에 준 변화
