--- a/study/면접 지식/Web/0. 웹통신 흐름.md
+++ b/study/면접 지식/Web/0. 웹통신 흐름.md
@@ -1,5 +1,73 @@
 # 웹 통신의 흐름
 
+## ip
+
+지금 쓰는 것은 https://www.youtube.com/watch?v=pRWD7oTeuFw
+
+영상 내용을 졸면서 듣고 난 뒤 대충 내 머리속에 어떻게든 박힌걸 쏟아내는거
+
+나중에 보강해서 업데이트 할것 알간?
+
+### ip 란?
+
+인터넷 프로토콜으로 인터넷 활동하는데 쓰이는 규약이라고 대충 생각하면 됨
+
+사용자인 내 컴퓨터 뿐만 아니라 모든 컴퓨터에 다 ip 가 있고 인터넷 사이트 역시 ip 가 있음
+
+가령 naver.com 같은 경우 cmd 켜서 `nslookup` 에 물어보면 대충 223.130.195.95 이런 ip 주소를 불러줌 (자세한 방법은 검색해 볼것)
+
+하지만 우린 naver.com 을 쳐서 들어가지 저런 상세한 주소를 치진 않지
+
+이게 바로 `도메인 주소`임
+
+---
+
+우리가 치는건 naver.com 이지만 이렇게 들어간 값을 `DNS 서버` 가 보고 naver.com 에 맡는 실 ip 주소로 연결을 해주는거지
+
+이런식으로 운영되는 ip 주소는 32 비트로 총 40억개의 주소를 이용할수 있는데
+
+이 방법을 `IPv4` 주소 체계라고 그럼
+
+하지만 40억개 가지고 지구상에 있는걸 다 감당 할 수 없어서 나온게 `IPv6` 임
+
+---
+
+그러면 우리 공인ip, 사설ip 에 대하 알아보자
+
+현재 대부분 일반인들이 사용하는게 사설ip 임
+
+사설 ip 는 대충 비유하자면 하위폴더 같은거임
+
+공유기를 통해 ip 를 할당되는데 이 ip 는 주기적으로 바뀜
+
+이러면 뭐가 좋냐 공인ip 하나로 여러개 ip 를 만들 수 있음
+
+대충 직바구리/야동 주소랑 외가리/야동 주소랑 다르듯
+
+사설 ip 가 같더라도 공유기의 공인 ip 가 다르니까 구별이 가능해짐
+
+보통 공인ip 같은 경우 업체들이 쓰고 일반인들은 kt,skt 같은 ISP(인터넷 서비스 프로바이더) 같은 애들한태 공유기 할당 받아서 사설 ip 를 씀
+
+---
+
+사설 ip의 경우 주기적으로 ip가 변동되기에 네이버 같은 서비스를 할 수 없음
+
+그렇기에 대부분의 업체는 공인ip 를 쓰는데
+
+그러면 사설 ip 는 서버 구축할 방법이 없을까? 그건 아님
+
+도메인 주소를 쓴다는 전제하에 DDNS (다이나믹 DNS) 를 쓰면 할 수 있음
+
+ip 주소가 바뀔때마다 DNS 서버에 나 바뀌였소 하고 신호를 주면
+
+DDNS 서버가 잘 알아먹고 변경된 주소로 해준다고 하데
+
+---
+
+대충 요정도 기억나네 더 할려면 더 할 순 있는데
+
+제대로 설명을 못함 포트 포워딩, NAT, 공인iP 하나로 2대 웹서버 운영 이런거
+
 ## 레퍼런스
 
 [웹 통신의 큰 흐름](https://github.com/JaeYeopHan/Interview_Question_for_Beginner/tree/master/Network#%EC%9B%B9-%ED%86%B5%EC%8B%A0%EC%9D%98-%ED%81%B0-%ED%9D%90%EB%A6%84)
