--- a/study/면접 지식/운영체제/1. 프로세스.md
+++ b/study/면접 지식/운영체제/1. 프로세스.md
@@ -100,55 +100,63 @@
 
 스택은 높은 주소 >> 낮은 주소순으로 할당함
 
-### 쓰레드
+### 프로세스 상태
 
-- 스레드 : 프로세스 안 실행 단위
+총 5개의 상태임
 
-각각의 프로세스는 독립
+- 생성단계
 
-### CPU 스케쥴러
+  메모리에 생성되어 PCB를 할당 받은 상태
 
-    준비큐에 있는 프로세스에 대해 cpu 할당하는 방법
+  준비 완료 되면 준비 상태로 ㄱㄱ
 
-선점, 비선점 >> 선점은 뺏았는거 (하고있던거)
+- 준비단계
 
-- 비선점
+  실행 가능이지만 차례가 아니므로 기달중
 
-  - FCFS : 선입선출
+  차례가 되면 실행 상태로 ㄱㄱ
 
-  - SJF : 작업시간 가장 짧은거
+- 실행단계
 
-- 선점
+  CPU 할당 받아 실행 중인 상태
 
-  - SRT : 잔여시간 가장 짧은거
+  할당 시간 다 소용시(타이머 인터럽트 발생) 준비 상태로
 
-  - RR : 돌아가면서 조금씩 다하는거
+  실행도중 입출력 장치를 사용하면 입출력 작업이 끝날때까지 대기 상태로
 
-  - Ps : 우선 순위가 높은거
+- 대기단계
 
-## 가상메모리
+  프로세스가 실행도중 입출력 장치 사용할 경우
 
-    모든 프로세스 메모리를 가져오기에는 메모리 크기가 한계가 있어
+  입출력은 CPU 보다 느리기 때문에 대기상태로 가는거
 
-    프로세스에서 사용할 부분만 메모리에 나머지는 디스크에 보관하는
+  입출력 작업이 끝나면(입출력 완료 인터럽트를 받으면) 준비 상태로
 
-    기법
+- 종료단계
 
-## 데드락
+  프로세스 종료
 
-    프로세스가 자원을 얻지 못해 다음 작업 못하는 상태
+  PCB, 프로세스 메모리 정리
 
-### 데드락 발생 조건
+### 프로세스 계층 구조
 
-4가지가 있는데 4개 다 동시에 성립할때 발생
+윈도우는 프로세스 계층 구조가 아님
 
-- 상호배제
+리눅스, 맥이 프로세스 계층 구조임
 
-- 점유대기
+계층 구조란 프로세스 실행 도중 (시스템 호출을 통해) 프로세스를 생성하는 것
 
-- 비선점
+부모, 자식 프로세스로 구조화 됨
 
-- 순환대기
+- 부모 프로세스와 자식 프로세스는 별개의 프로세스이기 때문에 PID 주소가 다름
+
+- 일부 운영체제에서는 자식 프로세스에 부모 프로세스 PID(PPID) 를 명시하기도 함
+
+프로세스 생성 기법은 `fork`(복제) 와 `exec`(교체) 임
+
+부모 프로세스는 자신을 복제해서 자식 프로세스 생성하고
+
+자식 프로세스는 자신의 메모리 공간을 새로운 프로개램으로 덮어씌움(코드/ 데이터 영역은 실행할 프로그램 내용으로 바뀌고, 나머지 영역은 초기화)
 
 ## 레퍼런스
 
