--- a/study/데브코스/3. Database/3.1 데이터베이스란.md
+++ b/study/데브코스/3. Database/3.1 데이터베이스란.md
@@ -47,7 +47,8 @@
 ```
 <!--1. 도커 데스크탑 실행 -->
 <!--2. cmd 실행 -->
-docker exce -it mariadb /bin/bash
+<!-- docker exce -it mariadb /bin/bash -->
+  docker exec -i -t mariadb bash
 mariadb -u root -p
 ```
 
