--- a/study/데브코스/4. nodeJs/6.post.md
+++ b/study/데브코스/4. nodeJs/6.post.md
@@ -46,11 +46,11 @@ post 는 서버로 데이터를 전송하는 메소드로 생성 역활을 함
 
   ```js
   app.get("/youtubers", (req, res) => {
-    const sendObject = {};
+    const youtubers = {};
     db.forEach((value, key) => {
-      sendObject[key] = value;
+      youtubers[key] = value;
     });
-    res.json(sendObject);
+    res.json(youtubers);
   });
   ```
 
