--- a/study/데브코스/5. DB/3. workbench.md
+++ b/study/데브코스/5. DB/3. workbench.md
@@ -6,6 +6,11 @@ connect to database 눌러서 그냥 기본으로 설정 하면 됨
 
 - TCP/IP 란?
 
+> Transmission Control Protocol/Internet Protocol.
+> 컴퓨터 네트워크에서 데이터를 전송하는 데 사용되는 프로토콜 스택
+
+응표세전네데물 하고 외웠던 그게 저거임
+
 ## 유튜브 users 테이블
 
 이제 workbench 이를 이용해서 작성해볼꺼임
@@ -29,10 +34,12 @@ create_at 추가
 
 ```sql
 ALTER TABLE `Youtube`.`users`
-ADD COLUMN `created_at` TIMESTAMP NULL DEFAULT current_timestamp() AFTER `content`;
+ADD COLUMN `created_at` TIMESTAMP NULL DEFAULT
+current_timestamp() AFTER `content`;
 
 -- 확인
-INSERT INTO `Youtube`.`users` (`email`, `name`, `password`) VALUES ('time@time.com', '타임', '1231');
+INSERT INTO `Youtube`.`users` (`email`, `name`, `password`)
+VALUES ('time@time.com', '타임', '1231');
 ```
 
 ## channels 테이블
@@ -53,13 +60,19 @@ CREATE TABLE `Youtube`.`channels` (
         ON UPDATE NO ACTION);
 ```
 
+여기서
+
 ```sql
 INDEX `user_id_idx` (`user_id` ASC) VISIBLE
 ```
 
-의 경우 index 를 user_id 컬럼에 대한 인덱스를 생성하는 것
+이 쿼리문은 index 를 user_id 컬럼에 대한 인덱스를 생성하는 것
 
-CONSTRAINT 는 제약 user_id 가 FK 라는 걸 명시
+`SHOW INDEX FROM channels;` 이라고 치면
+
+channels.id 값과 channels.user_id_idx 값으로 2개가 나온다.
+
+`CONSTRAINT` 는 제약 user_id 가 FK 라는 걸 명시
 
 - ON DELETE NO ACTION
 
@@ -80,15 +93,21 @@ CONSTRAINT 는 제약 user_id 가 FK 라는 걸 명시
 - youtube 테이블 삽입
 
   ```sql
-  INSERT INTO `Youtube`.`users` (`id`, `email`, `name`, `password`, `content`) VALUES ('1', 'kim@email.com', '김송아', '1231', '010040000');
-  INSERT INTO `Youtube`.`users` (`email`, `name`, `password`, `content`) VALUES ('park@mail.com', '박송아', '1231', '011225555');
+  INSERT INTO `Youtube`.`users` (`id`, `email`, `name`, `password`, `content`)
+  VALUES ('1', 'kim@email.com', '김송아', '1231', '010040000');
+
+  INSERT INTO `Youtube`.`users` (`email`, `name`, `password`, `content`)
+  VALUES ('park@mail.com', '박송아', '1231', '011225555');
   ```
 
 - channels 테이블 삽입
 
   ```sql
-  INSERT INTO `Youtube`.`channels` (`name`, `sub_num`, `video_count`, `user_id`) VALUES ('run', '1', '5', '10');
-  INSERT INTO `Youtube`.`channels` (`name`, `user_id`) VALUES ('run', '2');
+  INSERT INTO `Youtube`.`channels` (`name`, `sub_num`, `video_count`, `user_id`)
+  VALUES ('run', '1', '5', '10');
+
+  INSERT INTO `Youtube`.`channels` (`name`, `user_id`)
+  VALUES ('run', '2');
   ```
 
   apply 이하면 역시나 없는 user_id(FK) 값을 삽입하기 때문에 오류가 뜸
@@ -116,8 +135,11 @@ const connection = mysql.createConnection({
 
 // simple query
 connection.query("SELECT * FROM `users`", function (err, results, fields) {
-  console.log(results); // results contains rows returned by server
-  console.log(fields); // fields contains extra meta data about results, if available
+  // results contains rows returned by server
+  console.log(results);
+
+  // fields contains extra meta data about results, if available
+  console.log(fields);
 });
 ```
 
