--- a/study/데브코스/7. 2차프로젝트/1. API 설계.md
+++ b/study/데브코스/7. 2차프로젝트/1. API 설계.md
@@ -195,7 +195,7 @@ false 면 카테고리 전체
 
 기존에 있는 행에 수정을 하는거임
 
-- Method : PUT
+- Method : POST
 
 - URL : /likes/{:bookId}
 
@@ -207,11 +207,9 @@ false 면 카테고리 전체
 
 ### 2. 좋아요 취소
 
-※ DB 설계 하면서 다시 한번 보자
+- Method : DELETE
 
-- Method : PUT
-
-- URL : /likes/{:bookId} ???? URL 이 겹침
+- URL : /likes/{:bookId}
 
 - HTTP status code : 성공 - 200
 
@@ -279,9 +277,7 @@ false 면 카테고리 전체
 
 - Response Body :
 
-## 5. 주문 API
-
-### 1. 장바구니 선택 상품 조회
+### 4. 장바구니 선택 상품 조회
 
 - Method : GET
 
@@ -292,7 +288,9 @@ false 면 카테고리 전체
 - Request Body :
 
   ```js
-
+  [
+    cartltemId, ....
+  ]
   ```
 
 - Response Body :
@@ -312,6 +310,96 @@ false 면 카테고리 전체
   ];
   ```
 
+## 5. 주문(결제) API
+
+### 1. 결제
+
+결제를 하면 장바구니에서 주문된 상품은 DELETE 되야함
+
+- Method : POST
+
+- URL : /orders
+
+- HTTP status code : 성공 - 200
+
+- Request Body :
+
+  ```js
+  {
+    items : [{
+      cartltemId "cartltemId",
+      bookId:"bookId",
+      count : "수량",
+      },
+      ...],
+    delivery : {
+      address : "주소",
+      receiver : "이름",
+      contact : "번호"
+    },
+
+    totalPrice : 총금액
+
+  }
+  ```
+
+- Response Body :
+
+### 2. 주문 목록 조회
+
+- Method : GET
+
+- URL : /oders
+
+- HTTP status code : 성공 - 200
+
+- Request Body :
+
+- Response Body :
+
+  ```js
+  [
+    {
+      orderId: "주문번호",
+      odersDate: "주문일자",
+      delivery: {
+        address: "주소",
+        receiver: "이름",
+        contact: "전화번호",
+      },
+      bookTitle: "대표 책 제목",
+      totalPice: "결제 금액",
+      totalCount: "총 수량",
+    },
+  ];
+  ```
+
+### 3. 주문 상세 조회
+
+- Method : GET
+
+- URL : /orders/{orderId}
+
+- HTTP status code : 성공 - 200
+
+- Request Body :
+
+- Response Body :
+
+  ```js
+  [
+    {
+      bookId: "도서Id",
+      bookTitle: "도서 제목",
+      author: "작가명",
+      price: "가격",
+      count: "수량",
+    },
+
+    // ...
+  ];
+  ```
+
 ## 양식
 
 - Method :
@@ -323,3 +411,9 @@ false 면 카테고리 전체
 - Request Body :
 
 - Response Body :
+
+## ERD
+
+https://dbdiagram.io/home
+
+여길 이용할꺼임
