--- a/study/데브코스/7. 2차프로젝트/1. API 설계.md
+++ b/study/데브코스/7. 2차프로젝트/1. API 설계.md
@@ -6,7 +6,7 @@
 
 - Method : POST
 
-- URL : /join
+- URL : /users/join
 
 - HTTP status code : 성공 - 201, 실패 - 404
 
@@ -32,7 +32,7 @@
 
 - Method : POST
 
-- URL : /login
+- URL : /users/login
 
 - HTTP status code : 성공 - 200, 실패 - 404
 
@@ -55,7 +55,7 @@
 
 - Method : POST
 
-- URL : /reset
+- URL : /users/reset
 
 - HTTP status code : 성공 - 200, 실패 - 400?
 
@@ -75,7 +75,7 @@
 
 - Method : PUT
 
-- URL : /reset
+- URL : /users/reset
 
 - HTTP status code : 성공 - 200, 실패 - 400?
 
@@ -149,7 +149,6 @@
     index : "목차",
     price: "가격",
     likes: "좋아요 수",
-    liked : boolean,
     pubDate : "출간일"
   }
   ```
@@ -416,4 +415,73 @@ false 면 카테고리 전체
 
 https://dbdiagram.io/home
 
-여길 이용할꺼임
+Table users{
+id integer [primary key]
+email varchar
+password varchar
+}
+
+Table books {
+id integer [primary key]
+title varchar
+cartegory varchar
+format varchar
+isbn varchar
+summary text
+description text
+author varchar
+pages integer
+index text
+price integer
+likes integer
+pubDate timestamp
+}
+
+table likes {
+user_id integer
+book_id integer
+}
+
+table cartItems {
+id integer
+book_id integer
+count integer
+}
+
+table delivery {
+id integer
+address varchar
+receiver varchar
+contact varchar
+user_id integer
+
+}
+
+table orders{
+id integer
+delivery_id integer
+total_price integer
+create_at timestamp
+}
+
+table ordered_book{
+order_id integer
+book_id integer
+count integer
+}
+
+Ref: likes.user_id > users.id // many-to-one
+
+Ref: delivery.user_id > users.id // many-to-one
+
+Ref: cartItems.book_id > books.id // many-to-one
+
+Ref: orders.delivery_id > delivery.id // many-to-one
+
+Ref: ordered_book.order_id > orders.id
+
+Ref: ordered_book.book_id > books.id
+
+// Ref: members.id < follows.following_user_id
+
+// Ref: members.id < follows.followed_user_id
